All page translated to spanish, shop-tem deleted from nav bar, comments section deleted from blog-detail page, some information added about ElTurpial

--- a/public/kidszone/about.html
+++ b/public/kidszone/about.html
@@ -106,7 +106,7 @@
 
                                     <!-- start menu area -->
                                     <ul class="navbar-nav ml-auto" id="nav" style="display: none;">
-                                        <li><a href="index.html">Home</a>
+                                        <li><a href="index.html">Inicio</a>
                                         </li>
                                         <li><a href="#">Sobre nosotros</a>
                                             <ul>
@@ -204,7 +204,7 @@
                     <h1>Sobre nosotros</h1>
                     <div class="page-link">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="index.html">Inicio</a></li>
                             <li><a href="javascript:void(0)">Sobre nosotros</a></li>
                         </ul>
                     </div>
@@ -229,9 +229,12 @@
                         <div class="row align-items-center no-gutters sm-margin-40px-bottom">
                             <div class="col-lg-6 order-2 order-lg-1">
                                 <div class="padding-70px-lr md-padding-40px-lr sm-no-padding-lr text-center">
-                                    <h4 class="font-size32 md-font-size30 sm-font-size28 md-margin-15px-bottom sm-margin-10px-bottom">Why Kindergarten is the Best Start?</h4>
-                                    <p class="margin-30px-bottom md-margin-20px-bottom">‘Kindergarten’ means the children’s garden – a magical place for young minds bristling with excitement, full of imagination and possibility. Watch our video to discover how children learn.</p>
-                                    <a href="javascript:void(0)" class="butn sky small">Ver nuestro equipo</a>
+                                    <h4 class="font-size32 md-font-size30 sm-font-size28 md-margin-15px-bottom sm-margin-10px-bottom">Misión</h4>
+                                    <p class="margin-30px-bottom md-margin-20px-bottom">Apoyar a las familias en la formación integral de sus hijos, comprometiéndonos a 
+                                        atender a las necesidades educativas especiales, dándoles la oportunidad de 
+                                        desarrollar sus habilidades y capacidades afectivas, sociales y cognitivas 
+                                        generando aprendizajes permanentes, a partir de metodologías con cultura 
+                                        ecológica y conservación del ambiente.</p>
                                 </div>
                             </div>
                             <div class="col-lg-6 order-1 order-lg-2 sm-margin-20px-bottom">
@@ -249,9 +252,12 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="padding-70px-lr md-padding-50px-lr sm-no-padding-lr text-center">
-                                    <h4 class="font-size32 md-font-size30 sm-font-size28 md-margin-15px-bottom sm-margin-10px-bottom">Welcome to the Most Secure Place!</h4>
-                                    <p class="margin-30px-bottom md-margin-20px-bottom">We pride ourselves on being able to provide a happy, safe and inclusive environment in which children aged two and a half to five years old are encouraged!</p>
-                                    <a href="javascript:void(0)" class="butn sky small">Schedule a Tour</a>
+                                    <h4 class="font-size32 md-font-size30 sm-font-size28 md-margin-15px-bottom sm-margin-10px-bottom">Visión</h4>
+                                    <p class="margin-30px-bottom md-margin-20px-bottom">Ser un Centro de Educación Inicial reconocido por la calidad del servicio educativo, 
+                                        con un personal comprometido al conjunto de actividades necesarias para llevar a 
+                                        cabo los procesos educativos y de aprendizaje con cultura ecológica para todos los 
+                                        usuarios y sus necesidades especiales, contribuyendo así en la formación de 
+                                        ciudadanos con valores humanos responsables de su ambiente. </p>
                                 </div>
                             </div>
                         </div>
@@ -267,7 +273,7 @@
         <section class="no-padding-top">
             <div class="container">
                 <div class="section-heading">
-                    <h3>Our Teachers</h3>
+                    <h3>Nuestros Profesores</h3>
                     <span class="title-separator"></span>
                 </div>
                 <div class="row justify-content-center">
@@ -278,7 +284,7 @@
                             </div>
                             <div class="teacher-text">
                                 <h4><a href="teacher-details.html">Henrite Bridg</a></h4>
-                                <p>Founder & Head</p>
+                                <p>Fundador</p>
                             </div>
                         </div>
                     </div>
@@ -290,7 +296,7 @@
                             </div>
                             <div class="teacher-text">
                                 <h4><a href="teacher-details.html">Priscila Baker</a></h4>
-                                <p>Principal</p>
+                                <p>Director</p>
                             </div>
                         </div>
                     </div>
@@ -302,7 +308,7 @@
                             </div>
                             <div class="teacher-text">
                                 <h4><a href="teacher-details.html">Horothy Hulese</a></h4>
-                                <p>Maths Educator</p>
+                                <p>Profesora de Danza</p>
                             </div>
                         </div>
                     </div>
@@ -314,7 +320,7 @@
                             </div>
                             <div class="teacher-text">
                                 <h4><a href="teacher-details.html">Laura Clemen</a></h4>
-                                <p>Science Educator</p>
+                                <p>Maestro de Deporte</p>
                             </div>
                         </div>
                     </div>
@@ -367,7 +373,7 @@
         <section class="testimonial-section">
             <div class="container">
                 <div class="section-heading">
-                    <h3>What the parents say</h3>
+                    <h3>¿Qué dicen los padres?</h3>
                     <div class="title-separator"></div>
 
                 </div>
@@ -375,7 +381,7 @@
                 <div class="owl-carousel owl-theme">
                     <div class="testimonial-single">
                         <div class="content">
-                            <p class="no-margin-bottom">My daughter has developed in so many ways. Allamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+                            <p class="no-margin-bottom">Mi hija se ha desarrollado de muchas maneras. Allamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
                         </div>
                         <div class="info-box">
                             <div class="d-flex align-items-center">
@@ -383,8 +389,8 @@
                                     <img src="img/parents/1.jpg" alt="" class="rounded-circle" />
                                 </div>
                                 <div class="padding-20px-left">
-                                    <h5>Lisa M. Smith</h5>
-                                    <h6 class="opacity4 main-font">Tiya's Mother</h6>
+                                    <h5>Elena Rodríguez</h5>
+                                    <h6 class="opacity4 main-font">Mamá de Andrea</h6>
                                 </div>
                             </div>
                         </div>
@@ -392,7 +398,7 @@
 
                     <div class="testimonial-single">
                         <div class="content">
-                            <p class="no-margin-bottom">The nursery itself is a fun and bright environment. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt est laborum. </p>
+                            <p class="no-margin-bottom">La guardería en sí es un ambiente divertido y luminoso. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt est laborum. </p>
                         </div>
                         <div class="info-box">
                             <div class="d-flex align-items-center">
@@ -400,8 +406,8 @@
                                     <img src="img/parents/2.jpg" alt="" class="rounded-circle" />
                                 </div>
                                 <div class="padding-20px-left">
-                                    <h5>Earl H. Kisard</h5>
-                                    <h6 class="opacity4 main-font">Herry's Father</h6>
+                                    <h5>Enrique Puerta</h5>
+                                    <h6 class="opacity4 main-font">Papá de Henry</h6>
                                 </div>
                             </div>
                         </div>
@@ -409,7 +415,7 @@
 
                     <div class="testimonial-single">
                         <div class="content">
-                            <p class="no-margin-bottom style-three">My daughter loves the teachers very much. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia magni dolores.</p>
+                            <p class="no-margin-bottom style-three">Mi hija quiere mucho a los profesores. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia magni dolores.</p>
                         </div>
                         <div class="info-box">
                             <div class="d-flex align-items-center">
@@ -417,8 +423,8 @@
                                     <img src="img/parents/3.jpg" alt="" class="rounded-circle" />
                                 </div>
                                 <div class="padding-20px-left">
-                                    <h5>Pauli J. Srady</h5>
-                                    <h6 class="opacity4 main-font">Triana's Mother</h6>
+                                    <h5>Paula Hernández</h5>
+                                    <h6 class="opacity4 main-font">Mamá de Valentina</h6>
                                 </div>
                             </div>
                         </div>
@@ -426,7 +432,7 @@
 
                     <div class="testimonial-single">
                         <div class="content">
-                            <p class="no-margin-bottom style-four">Fantastic school! The teachers are professional. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.</p>
+                            <p class="no-margin-bottom style-four">¡Maravilloso lugar! Los profesores son profesionales. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.</p>
                         </div>
                         <div class="info-box">
                             <div class="d-flex align-items-center">
@@ -434,8 +440,8 @@
                                     <img src="img/parents/4.jpg" alt="" class="rounded-circle" />
                                 </div>
                                 <div class="padding-20px-left">
-                                    <h5>Ronald R. Jevlon</h5>
-                                    <h6 class="opacity4 main-font">Edna's Father</h6>
+                                    <h5>Ronald Juarez</h5>
+                                    <h6 class="opacity4 main-font">Papá de Esther</h6>
                                 </div>
                             </div>
                         </div>
