--- a/public/kidszone/blog-grid.html
+++ b/public/kidszone/blog-grid.html
@@ -106,11 +106,7 @@
 
                                     <!-- start menu area -->
                                     <ul class="navbar-nav ml-auto" id="nav" style="display: none;">
-                                        <li><a href="#">Home</a>
-                                            <ul>
-                                                <li><a href="demo-1.html">Home 01</a></li>
-                                                <li><a href="demo-2.html">Home 02</a></li>
-                                            </ul>
+                                        <li><a href="index.html">Inicio</a>
                                         </li>
                                         <li><a href="#">Sobre nosotros</a>
                                             <ul>
@@ -205,11 +201,11 @@
         <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
             <div class="container">
                 <div class="page-title">
-                    <h1>Blog Grid</h1>
+                    <h1>Blog</h1>
                     <div class="page-link">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="javascript:void(0)">Blog Grid</a></li>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="javascript:void(0)">Blog</a></li>
                         </ul>
                     </div>
                 </div>
@@ -227,7 +223,7 @@
                                 <a href="blog-post.html"><img src="img/blog/blog-1.jpg" alt="" /></a>
                                 <div class="date-details">
                                     <span class="date">10</span>
-                                    <p class="month">Jan</p>
+                                    <p class="month">Enero</p>
                                 </div>
                             </div>
                             <div class="news-details">
@@ -235,13 +231,10 @@
                                     <li>
                                         <a href="blog-post.html"><i aria-hidden="true" class="fa fa-user"></i> Admin</a>
                                     </li>
-                                    <li>
-                                        <a href="blog-post.html"><i aria-hidden="true" class="fas fa-comments"></i> 4 Comments</a>
-                                    </li>
                                 </ul>
-                                <h4><a href="blog-post.html">It's time to back to school for teach</a></h4>
+                                <h4><a href="blog-post.html">Es tiempo de volver a clases a enseñar</a></h4>
                                 <p>Coluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                <a href="blog-post.html">read more ...</a>
+                                <a href="blog-post.html">Leer más ...</a>
                             </div>
                         </div>
                     </div>
@@ -251,7 +244,7 @@
                                 <a href="blog-post.html"><img src="img/blog/blog-2.jpg" alt="" /></a>
                                 <div class="date-details">
                                     <span class="date">21</span>
-                                    <p class="month">Jan</p>
+                                    <p class="month">Enero</p>
                                 </div>
                             </div>
                             <div class="news-details">
@@ -259,13 +252,10 @@
                                     <li>
                                         <a href="blog-post.html"><i aria-hidden="true" class="fa fa-user"></i> Admin</a>
                                     </li>
-                                    <li>
-                                        <a href="blog-post.html"><i aria-hidden="true" class="fas fa-comments"></i> 6 Comments</a>
-                                    </li>
                                 </ul>
-                                <h4><a href="blog-post.html">This child game is easily you can go up</a></h4>
+                                <h4><a href="blog-post.html">Este juego para niños es fácil de hacer</a></h4>
                                 <p>Noluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                <a href="blog-post.html">read more ...</a>
+                                <a href="blog-post.html">Leer más ...</a>
                             </div>
                         </div>
                     </div>
@@ -275,7 +265,7 @@
                                 <a href="blog-post.html"><img src="img/blog/blog-3.jpg" alt="" /></a>
                                 <div class="date-details">
                                     <span class="date">10</span>
-                                    <p class="month">Feb</p>
+                                    <p class="month">Febrero</p>
                                 </div>
                             </div>
                             <div class="news-details">
@@ -283,13 +273,10 @@
                                     <li>
                                         <a href="blog-post.html"><i aria-hidden="true" class="fa fa-user"></i> Admin</a>
                                     </li>
-                                    <li>
-                                        <a href="blog-post.html"><i aria-hidden="true" class="fas fa-comments"></i> 4 Comments</a>
-                                    </li>
                                 </ul>
-                                <h4><a href="blog-post.html">A day in the life with reading</a></h4>
+                                <h4><a href="blog-post.html">Quedate en casa</a></h4>
                                 <p>Noluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                <a href="blog-post.html">read more ...</a>
+                                <a href="blog-post.html">Leer más ...</a>
                             </div>
                         </div>
                     </div>
@@ -299,7 +286,7 @@
                                 <a href="blog-post.html"><img src="img/blog/blog-4.jpg" alt="" /></a>
                                 <div class="date-details">
                                     <span class="date">15</span>
-                                    <p class="month">Feb</p>
+                                    <p class="month">Febrero</p>
                                 </div>
                             </div>
                             <div class="news-details">
@@ -307,13 +294,10 @@
                                     <li>
                                         <a href="blog-post.html"><i aria-hidden="true" class="fa fa-user"></i> Admin</a>
                                     </li>
-                                    <li>
-                                        <a href="blog-post.html"><i aria-hidden="true" class="fas fa-comments"></i> 8 Comments</a>
-                                    </li>
                                 </ul>
-                                <h4><a href="blog-post.html">Self improvement with kids power</a></h4>
+                                <h4><a href="blog-post.html">Diviertete en casa</a></h4>
                                 <p>Noluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                <a href="blog-post.html">read more ...</a>
+                                <a href="blog-post.html">Leer más ...</a>
                             </div>
                         </div>
                     </div>
@@ -323,7 +307,7 @@
                                 <a href="blog-post.html"><img src="img/blog/blog-5.jpg" alt="" /></a>
                                 <div class="date-details">
                                     <span class="date">22</span>
-                                    <p class="month">Feb</p>
+                                    <p class="month">Febrero</p>
                                 </div>
                             </div>
                             <div class="news-details">
@@ -331,13 +315,10 @@
                                     <li>
                                         <a href="blog-post.html"><i aria-hidden="true" class="fa fa-user"></i> Admin</a>
                                     </li>
-                                    <li>
-                                        <a href="blog-post.html"><i aria-hidden="true" class="fas fa-comments"></i> 5 Comments</a>
-                                    </li>
                                 </ul>
-                                <h4><a href="blog-post.html">Mind power with yoga and gymnastics</a></h4>
+                                <h4><a href="blog-post.html">Faciles y divertidos entrenamientos para los niños</a></h4>
                                 <p>Noluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                <a href="blog-post.html">read more ...</a>
+                                <a href="blog-post.html">Leer más ...</a>
                             </div>
                         </div>
                     </div>
@@ -347,7 +328,7 @@
                                 <a href="blog-post.html"><img src="img/blog/blog-6.jpg" alt="" /></a>
                                 <div class="date-details">
                                     <span class="date">25</span>
-                                    <p class="month">Feb</p>
+                                    <p class="month">Febrero</p>
                                 </div>
                             </div>
                             <div class="news-details">
@@ -355,13 +336,10 @@
                                     <li>
                                         <a href="blog-post.html"><i aria-hidden="true" class="fa fa-user"></i> Admin</a>
                                     </li>
-                                    <li>
-                                        <a href="blog-post.html"><i aria-hidden="true" class="fas fa-comments"></i> 7 Comments</a>
-                                    </li>
                                 </ul>
-                                <h4><a href="blog-post.html">Now we are start to teach books</a></h4>
+                                <h4><a href="blog-post.html">Empezaremos a enseñar con libros</a></h4>
                                 <p>Noluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                <a href="blog-post.html">read more ...</a>
+                                <a href="blog-post.html">Leer más ...</a>
                             </div>
                         </div>
                     </div>
@@ -373,11 +351,11 @@
                         <div class="text-center margin-60px-top md-margin-50px-top sm-margin-40px-top">
                             <div class="pagination text-small text-extra-dark-gray">
                                 <ul>
-                                    <li><a href="javascript:void(0);"><i class="fas fa-long-arrow-alt-left margin-5px-right xs-display-none"></i> Prev</a></li>
+                                    <li><a href="javascript:void(0);"><i class="fas fa-long-arrow-alt-left margin-5px-right xs-display-none"></i>Anterior</a></li>
                                     <li class="active"><a href="javascript:void(0);">1</a></li>
                                     <li><a href="javascript:void(0);">2</a></li>
                                     <li><a href="javascript:void(0);">3</a></li>
-                                    <li><a href="javascript:void(0);">Next <i class="fas fa-long-arrow-alt-right margin-5px-left xs-display-none"></i></a></li>
+                                    <li><a href="javascript:void(0);">Siguiente <i class="fas fa-long-arrow-alt-right margin-5px-left xs-display-none"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -395,42 +373,31 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-3 col-sm-6 col-12 sm-margin-30px-bottom">
-                            <div class="footer margin-20px-bottom"><img src="img/logos/logo.png" alt="" class="width-75 sm-width-150px" /></div>
-                            <p class="margin-10px-bottom">Adipisci velit, sed quia numquam eius moditempora inciduntdolo magnam voluptatem.</p>
-                            <a href="about.html" class="text-sky font-weight-700">read more<i class="fas fa-angle-right padding-10px-left display-inline-block vertical-align-middle"></i></a>
+                            <div class="footer margin-20px-bottom"><img src="img/logos/school-logo.jpg" alt="" class="width-75 sm-width-150px" /></div>
+                            <a href="about.html" class="text-sky font-weight-700">Nosotros<i class="fas fa-angle-right padding-10px-left display-inline-block vertical-align-middle"></i></a>
                         </div>
 
-                        <div class="col-lg-3 col-sm-6 col-12 sm-margin-30px-bottom">
+                        <div class="col-lg-6 col-sm-6 col-12 sm-margin-30px-bottom">
                             <div class="padding-50px-left md-padding-20px-left ms-no-padding-left">
-                                <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom ms-margin-15px-bottom">Useful Links</h4>
+                                <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom ms-margin-15px-bottom">Visita</h4>
                                 <ul class="list-style3">
-                                    <li><a href="about.html">About Kidz School</a></li>
-                                    <li><a href="login.html">Admission Open</a></li>
-                                    <li><a href="photo-gallery.html">Photo Gallery</a></li>
-                                    <li><a href="services.html">Best Services</a></li>
-                                    <li><a href="teachers.html">Our Teachers</a></li>
+                                    <li><a href="about.html">Inscripciones abiertas</a></li>
+                                    <li><a href="login.html">Nuestros Cursos</a></li>
+                                    <li><a href="photo-gallery.html">Galería de Fotos</a></li>
+                                    <li><a href="teachers.html">Nuestros Maestros</a></li>
+                                    <li><a href="event-grid.html">Eventos</a></li>
 
                                 </ul>
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-sm-6 col-12 ms-margin-30px-bottom">
-                            <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom ms-margin-15px-bottom">Opening Hours</h4>
-                            <ul class="list-style2">
-                                <li>Mon-Wed<span class="float-right">08:00-12:00 </span> </li>
-                                <li>Thr-Fri<span class="float-right"> 09:00-01:00</span> </li>
-                                <li>Saturday<span class="float-right">09:00-11:00</span> </li>
-                                <li>Sunday<span class="float-right">Closed</span> </li>
-                            </ul>
-                        </div>
-
                         <div class="col-lg-3 col-sm-6 col-12">
                             <div class="padding-50px-left md-padding-20px-left ms-no-padding-left">
-                                <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom">Contact Us</h4>
+                                <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom">Contáctanos</h4>
                                 <ul class="contact-info">
-                                    <li><i class="fas fa-mobile-alt"></i><a href="tel:01234567890">+1 234 567 890</a></li>
-                                    <li><i class="far fa-envelope"></i><a href="mailto:addyour@emailhere">addyour@emailhere</a></li>
-                                    <li><i class="fas fa-map-marker-alt"></i> 74 Guild Street 542B, Town MT. NY 10013.</li>
+                                    <li><i class="fas fa-mobile-alt"></i><a href="tel:584147723260">+58 414 772 3260</a></li>
+                                    <li><i class="far fa-envelope"></i><a href="mailto:elturpialcei@gmail.com">elturpialcei@gmail.com</a></li>
+                                    <li><i class="fas fa-map-marker-alt"></i> Villa Granada, Calle Cuba, Casa 23-24, Puerto Ordaz, Estado Bolívar.</li>
                                 </ul>
                             </div>
                         </div>
