--- a/public/kidszone/blog-list-sidebar.html
+++ b/public/kidszone/blog-list-sidebar.html
@@ -106,11 +106,7 @@
 
                                     <!-- start menu area -->
                                     <ul class="navbar-nav ml-auto" id="nav" style="display: none;">
-                                        <li><a href="#">Home</a>
-                                            <ul>
-                                                <li><a href="demo-1.html">Home 01</a></li>
-                                                <li><a href="demo-2.html">Home 02</a></li>
-                                            </ul>
+                                        <li><a href="index.html">Inicio</a>
                                         </li>
                                         <li><a href="#">Sobre nosotros</a>
                                             <ul>
@@ -208,8 +204,8 @@
                     <h1>Blog List Sidebar</h1>
                     <div class="page-link">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="javascript:void(0)">Blog List Sidebar</a></li>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="javascript:void(0)">Blog</a></li>
                         </ul>
                     </div>
                 </div>
@@ -230,7 +226,7 @@
                                 <img src="img/blog/blog-1.jpg" class="border-radius-5" alt="" />
                                 <div class="date bg-yellow">
                                     <span class="display-block text-white font-size30 md-font-size26 sm-font-size24">10</span>
-                                    <p class="text-white font-size18 md-font-size14 no-margin-bottom">Jun</p>
+                                    <p class="text-white font-size18 md-font-size14 no-margin-bottom">Enero</p>
                                 </div>
                             </div>
 
@@ -247,16 +243,11 @@
                                             <i aria-hidden="true" class="fa fa-tags text-yellow"></i> blog
                                         </a>
                                     </li>
-                                    <li>
-                                        <a href="javascript:void(0);">
-                                            <i aria-hidden="true" class="fa fa-comments text-yellow"></i> 4 Comments
-                                        </a>
-                                    </li>
                                 </ul>
-                                <h4><a href="blog-post.html">It's time to back to school for teach</a></h4>
+                                <h4><a href="blog-post.html">Es tiempo de volver a clases a enseñar</a></h4>
 
                                 <p>Exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. cillum fugiat eu fugiat nulla pariatur standard.Exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. cillum fugiat eu fugiat nulla pariatur standard business.
-                                    <div class="text-left margin-10px-top"><a href="blog-post.html" class="butn small yellow"><span>Read More</span></a></div>
+                                    <div class="text-left margin-10px-top"><a href="blog-post.html" class="butn small yellow"><span>Leer más</span></a></div>
                             </div>
 
                         </div>
@@ -266,7 +257,7 @@
                                 <img src="img/blog/blog-2.jpg" class="border-radius-5" alt="" />
                                 <div class="date bg-pink">
                                     <span class="display-block text-white font-size30 md-font-size26 sm-font-size24">21</span>
-                                    <p class="text-white font-size18 md-font-size14 no-margin-bottom">Jun</p>
+                                    <p class="text-white font-size18 md-font-size14 no-margin-bottom">Febrero</p>
                                 </div>
                             </div>
 
@@ -282,16 +273,11 @@
                                             <i aria-hidden="true" class="fa fa-tags text-pink"></i> blog
                                         </a>
                                     </li>
-                                    <li>
-                                        <a href="javascript:void(0);">
-                                            <i aria-hidden="true" class="fa fa-comments text-pink"></i> 6 Comments
-                                        </a>
-                                    </li>
                                 </ul>
-                                <h4><a href="blog-post.html">This child game is easily you can go up</a></h4>
+                                <h4><a href="blog-post.html">Este juego para niños es fácil de hacer</a></h4>
 
                                 <p>Exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. cillum fugiat eu fugiat nulla pariatur standard.Exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. cillum fugiat eu fugiat nulla pariatur standard business.
-                                    <div class="text-left margin-10px-top"><a href="blog-post.html" class="butn small pink"><span>Read More</span></a></div>
+                                    <div class="text-left margin-10px-top"><a href="blog-post.html" class="butn small pink"><span>Leer más</span></a></div>
                             </div>
 
                         </div>
@@ -301,7 +287,7 @@
                                 <img src="img/blog/blog-3.jpg" class="border-radius-5" alt="" />
                                 <div class="date bg-green">
                                     <span class="display-block text-white font-size30 md-font-size26 sm-font-size24">10</span>
-                                    <p class="text-white font-size18 md-font-size14 no-margin-bottom">Feb</p>
+                                    <p class="text-white font-size18 md-font-size14 no-margin-bottom">Marzo</p>
                                 </div>
                             </div>
 
@@ -317,16 +303,11 @@
                                             <i aria-hidden="true" class="fa fa-tags text-green"></i> blog
                                         </a>
                                     </li>
-                                    <li>
-                                        <a href="javascript:void(0);">
-                                            <i aria-hidden="true" class="fa fa-comments text-green"></i> 4 Comments
-                                        </a>
-                                    </li>
                                 </ul>
-                                <h4><a href="blog-post.html">A day in the life with reading</a></h4>
+                                <h4><a href="blog-post.html">Quedate en casa</a></h4>
 
                                 <p>Exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. cillum fugiat eu fugiat nulla pariatur standard.Exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. cillum fugiat eu fugiat nulla pariatur standard business.
-                                    <div class="text-left margin-10px-top"><a href="blog-post.html" class="butn small green"><span>Read More</span></a></div>
+                                    <div class="text-left margin-10px-top"><a href="blog-post.html" class="butn small green"><span>Leer más</span></a></div>
                             </div>
 
                         </div>
@@ -335,11 +316,11 @@
                         <div class="no-margin">
                             <div class="pagination text-small text-uppercase text-extra-dark-gray">
                                 <ul class="no-margin">
-                                    <li><a href="javascript:void(0);"><i class="fas fa-long-arrow-alt-left margin-5px-right xs-display-none"></i> Prev</a></li>
+                                    <li><a href="javascript:void(0);"><i class="fas fa-long-arrow-alt-left margin-5px-right xs-display-none"></i> Anterior</a></li>
                                     <li class="active"><a href="javascript:void(0);">1</a></li>
                                     <li><a href="javascript:void(0);">2</a></li>
                                     <li><a href="javascript:void(0);">3</a></li>
-                                    <li><a href="javascript:void(0);">Next <i class="fas fa-long-arrow-alt-right margin-5px-left xs-display-none"></i></a></li>
+                                    <li><a href="javascript:void(0);">Siguiente <i class="fas fa-long-arrow-alt-right margin-5px-left xs-display-none"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -355,13 +336,13 @@
 
                                 <div class="widget-sidebar">
                                     <div class="block-info">
-                                        <h6 class="bg-sky">Search</h6>
+                                        <h6 class="bg-sky">Buscar</h6>
                                         <div class="block-info-details">
 
                                             <div class="widget-sidebar search">
                                                 <form method='post'>
                                                     <input type="hidden" name="form-name" value="form 1" />
-                                                    <input type="search" name="search" placeholder="Type here ...">
+                                                    <input type="search" name="search" placeholder="Escribe aquí ...">
                                                     <button type="submit" class="butn"><i class="fa fa-search" aria-hidden="true"></i></button>
                                                 </form>
                                             </div>
@@ -372,28 +353,28 @@
 
                                 <div class="widget-sidebar">
                                     <div class="block-info">
-                                        <h6 class="bg-yellow">Categories</h6>
+                                        <h6 class="bg-yellow">Categorías</h6>
                                         <ul class="list-style12">
                                             <li>
-                                                <a href="javascript:void(0)"><i class="fas fa-gift text-sky font-size20 vertical-align-middle width-40px"></i>Kindergarten</a>
+                                                <a href="javascript:void(0)"><i class="fas fa-gift text-sky font-size20 vertical-align-middle width-40px"></i>Preescolar</a>
                                             </li>
                                             <li>
-                                                <a href="javascript:void(0)"><i class="fas fa-atom text-yellow font-size20 vertical-align-middle width-40px"></i>Funny and Happy</a>
+                                                <a href="javascript:void(0)"><i class="fas fa-atom text-yellow font-size20 vertical-align-middle width-40px"></i>Diversión</a>
                                             </li>
                                             <li>
-                                                <a href="javascript:void(0)"><i class="fas fa-child text-pink font-size20 vertical-align-middle width-40px"></i>Kids Care</a>
+                                                <a href="javascript:void(0)"><i class="fas fa-child text-pink font-size20 vertical-align-middle width-40px"></i>Cuidado de los niños</a>
                                             </li>
                                             <li>
-                                                <a href="javascript:void(0)"><i class="fas fa-volleyball-ball text-green font-size20 vertical-align-middle width-40px"></i>Playground</a>
+                                                <a href="javascript:void(0)"><i class="fas fa-volleyball-ball text-green font-size20 vertical-align-middle width-40px"></i>Clases Online</a>
                                             </li>
                                             <li>
-                                                <a href="javascript:void(0)"><i class="fas fa-crown text-orange font-size20 vertical-align-middle width-40px"></i>Indoor Games</a>
+                                                <a href="javascript:void(0)"><i class="fas fa-crown text-orange font-size20 vertical-align-middle width-40px"></i>Juegos de interior</a>
                                             </li>
                                             <li>
-                                                <a href="javascript:void(0)"><i class="fas fa-chalkboard-teacher text-purple font-size20 vertical-align-middle width-40px"></i>Teachers</a>
+                                                <a href="javascript:void(0)"><i class="fas fa-chalkboard-teacher text-purple font-size20 vertical-align-middle width-40px"></i>Maestros</a>
                                             </li>
                                             <li>
-                                                <a href="javascript:void(0)"><i class="fas fa-school text-light-pink font-size20 vertical-align-middle width-40px"></i>Classroom</a>
+                                                <a href="javascript:void(0)"><i class="fas fa-school text-light-pink font-size20 vertical-align-middle width-40px"></i>Salones</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -402,7 +383,7 @@
                                 <div class="widget-sidebar">
 
                                     <div class="block-info">
-                                        <h6 class="bg-green">Archives</h6>
+                                        <h6 class="bg-green">Archivos</h6>
                                         <div class="block-info-details">
 
                                             <ul class="list-style13 green no-margin-bottom">
@@ -427,7 +408,7 @@
                                                 <li><a href="javascript:void(0);">Maestros</a></li>
                                                 <li><a href="javascript:void(0);">Tareas</a></li>
                                                 <li><a href="javascript:void(0);">Clases</a></li>
-                                                <li><a href="javascript:void(0);">Efemeride</a></li>
+                                                <li><a href="javascript:void(0);">Efemerides</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -451,42 +432,31 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-3 col-sm-6 col-12 sm-margin-30px-bottom">
-                            <div class="footer margin-20px-bottom"><img src="img/logos/logo.png" alt="" class="width-75 sm-width-150px" /></div>
-                            <p class="margin-10px-bottom">Adipisci velit, sed quia numquam eius moditempora inciduntdolo magnam voluptatem.</p>
-                            <a href="about.html" class="text-sky font-weight-700">read more<i class="fas fa-angle-right padding-10px-left display-inline-block vertical-align-middle"></i></a>
+                            <div class="footer margin-20px-bottom"><img src="img/logos/school-logo.jpg" alt="" class="width-75 sm-width-150px" /></div>
+                            <a href="about.html" class="text-sky font-weight-700">Nosotros<i class="fas fa-angle-right padding-10px-left display-inline-block vertical-align-middle"></i></a>
                         </div>
 
-                        <div class="col-lg-3 col-sm-6 col-12 sm-margin-30px-bottom">
+                        <div class="col-lg-6 col-sm-6 col-12 sm-margin-30px-bottom">
                             <div class="padding-50px-left md-padding-20px-left ms-no-padding-left">
-                                <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom ms-margin-15px-bottom">Useful Links</h4>
+                                <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom ms-margin-15px-bottom">Visita</h4>
                                 <ul class="list-style3">
-                                    <li><a href="about.html">About Kidz School</a></li>
-                                    <li><a href="login.html">Admission Open</a></li>
-                                    <li><a href="photo-gallery.html">Photo Gallery</a></li>
-                                    <li><a href="services.html">Best Services</a></li>
-                                    <li><a href="teachers.html">Our Teachers</a></li>
+                                    <li><a href="about.html">Inscripciones abiertas</a></li>
+                                    <li><a href="login.html">Nuestros Cursos</a></li>
+                                    <li><a href="photo-gallery.html">Galería de Fotos</a></li>
+                                    <li><a href="teachers.html">Nuestros Maestros</a></li>
+                                    <li><a href="event-grid.html">Eventos</a></li>
 
                                 </ul>
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-sm-6 col-12 ms-margin-30px-bottom">
-                            <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom ms-margin-15px-bottom">Opening Hours</h4>
-                            <ul class="list-style2">
-                                <li>Mon-Wed<span class="float-right">08:00-12:00 </span> </li>
-                                <li>Thr-Fri<span class="float-right"> 09:00-01:00</span> </li>
-                                <li>Saturday<span class="float-right">09:00-11:00</span> </li>
-                                <li>Sunday<span class="float-right">Closed</span> </li>
-                            </ul>
-                        </div>
-
                         <div class="col-lg-3 col-sm-6 col-12">
                             <div class="padding-50px-left md-padding-20px-left ms-no-padding-left">
-                                <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom">Contact Us</h4>
+                                <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom">Contáctanos</h4>
                                 <ul class="contact-info">
-                                    <li><i class="fas fa-mobile-alt"></i><a href="tel:01234567890">+1 234 567 890</a></li>
-                                    <li><i class="far fa-envelope"></i><a href="mailto:addyour@emailhere">addyour@emailhere</a></li>
-                                    <li><i class="fas fa-map-marker-alt"></i> 74 Guild Street 542B, Town MT. NY 10013.</li>
+                                    <li><i class="fas fa-mobile-alt"></i><a href="tel:584147723260">+58 414 772 3260</a></li>
+                                    <li><i class="far fa-envelope"></i><a href="mailto:elturpialcei@gmail.com">elturpialcei@gmail.com</a></li>
+                                    <li><i class="fas fa-map-marker-alt"></i> Villa Granada, Calle Cuba, Casa 23-24, Puerto Ordaz, Estado Bolívar.</li>
                                 </ul>
                             </div>
                         </div>
