--- a/public/kidszone/event-grid.html
+++ b/public/kidszone/event-grid.html
@@ -106,7 +106,7 @@
 
                                     <!-- start menu area -->
                                     <ul class="navbar-nav ml-auto" id="nav" style="display: none;">
-                                        <li><a href="index.html">Home</a>
+                                        <li><a href="index.html">Inicio</a>
                                         </li>
                                         <li><a href="#">Sobre nosotros</a>
                                             <ul>
@@ -201,11 +201,11 @@
         <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
             <div class="container">
                 <div class="page-title">
-                    <h1>Event Grid</h1>
+                    <h1>Eventos</h1>
                     <div class="page-link">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="javascript:void(0)">Event Grid</a></li>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="javascript:void(0)">Eventos</a></li>
                         </ul>
                     </div>
                 </div>
@@ -225,9 +225,9 @@
                             </div>
                             <div class="col-right">
                                 <div class="padding-30px-lr md-padding-25px-lr xs-padding-25px-all display-table-cell vertical-align-middle height-100">
-                                    <h6 class="text-sky">25 DEC 2019</h6>
-                                    <h4><a href="event-details.html">Christmas party in our school</a></h4>
-                                    <p class="no-margin-bottom">Kids in school qui officia deser untimo mollit anim id est laborum.</p>
+                                    <h6 class="text-sky">12 Marzo 2021</h6>
+                                    <h4><a href="event-details.html">Viacrucis</a></h4>
+                                    <p class="no-margin-bottom">Esta semana Santa qui officia deser untimo mollit anim id est laborum.</p>
                                 </div>
                             </div>
                         </div>
@@ -240,9 +240,9 @@
                             </div>
                             <div class="col-right">
                                 <div class="padding-30px-lr md-padding-25px-lr xs-padding-25px-all display-table-cell vertical-align-middle height-100">
-                                    <h6 class="text-yellow">15 MAY 2019</h6>
-                                    <h4><a href="event-details.html">Creative lab day with teacher</a></h4>
-                                    <p class="no-margin-bottom">Kids in school qui officia deser untimo mollit anim id est laborum.</p>
+                                    <h6 class="text-yellow">15 Febrero 2021</h6>
+                                    <h4><a href="event-details.html">Día de Laboratorio creativo con profesores</a></h4>
+                                    <p class="no-margin-bottom">En la escuela qui officia deser untimo mollit anim id est laborum.</p>
                                 </div>
                             </div>
                         </div>
@@ -255,8 +255,8 @@
                             </div>
                             <div class="col-right">
                                 <div class="padding-30px-lr md-padding-25px-lr xs-padding-25px-all display-table-cell vertical-align-middle height-100">
-                                    <h6 class="text-pink">10 JAN 2020</h6>
-                                    <h4><a href="event-details.html">The Parent and child events</a></h4>
+                                    <h6 class="text-pink">10 Enero 2020</h6>
+                                    <h4><a href="event-details.html">Evento de niños y padres</a></h4>
                                     <p class="no-margin-bottom">Kids in school qui officia deser untimo mollit anim id est laborum.</p>
                                 </div>
                             </div>
@@ -270,9 +270,9 @@
                             </div>
                             <div class="col-right">
                                 <div class="padding-30px-lr md-padding-25px-lr xs-padding-25px-all display-table-cell vertical-align-middle height-100">
-                                    <h6 class="text-green">20 AUG 2019</h6>
-                                    <h4><a href="event-details.html">The great primary fun fair</a></h4>
-                                    <p class="no-margin-bottom">Kids in school qui officia deser untimo mollit anim id est laborum.</p>
+                                    <h6 class="text-green">20 Agosto 2019</h6>
+                                    <h4><a href="event-details.html">Divertida feria científica</a></h4>
+                                    <p class="no-margin-bottom">Haz volar tu imaginación qui officia deser untimo mollit anim id est laborum.</p>
                                 </div>
                             </div>
                         </div>
@@ -285,8 +285,8 @@
                             </div>
                             <div class="col-right">
                                 <div class="padding-30px-lr md-padding-25px-lr xs-padding-25px-all display-table-cell vertical-align-middle height-100">
-                                    <h6 class="text-purple">05 SEP 2019</h6>
-                                    <h4><a href="event-details.html">The teachers' day celebration</a></h4>
+                                    <h6 class="text-purple">15 Enero 2019</h6>
+                                    <h4><a href="event-details.html">Día del Maestro</a></h4>
                                     <p class="no-margin-bottom">Kids in school qui officia deser untimo mollit anim id est laborum.</p>
                                 </div>
                             </div>
@@ -300,8 +300,8 @@
                             </div>
                             <div class="col-right">
                                 <div class="padding-30px-lr md-padding-25px-lr xs-padding-25px-all display-table-cell vertical-align-middle height-100">
-                                    <h6 class="text-orange">21 FEB 2020</h6>
-                                    <h4><a href="event-details.html">Sports day for our school kids</a></h4>
+                                    <h6 class="text-orange">21 Febrero 2020</h6>
+                                    <h4><a href="event-details.html">Semana Deportiva</a></h4>
                                     <p class="no-margin-bottom">Kids in school qui officia deser untimo mollit anim id est laborum.</p>
                                 </div>
                             </div>
