--- a/public/kidszone/faq.html
+++ b/public/kidszone/faq.html
@@ -106,7 +106,7 @@
 
                                     <!-- start menu area -->
                                     <ul class="navbar-nav ml-auto" id="nav" style="display: none;">
-                                        <li><a href="index.html">Home</a>
+                                        <li><a href="index.html">Inicio</a>
                                         </li>
                                         <li><a href="#">Sobre nosotros</a>
                                             <ul>
@@ -201,11 +201,11 @@
         <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
             <div class="container">
                 <div class="page-title">
-                    <h1>FAQ</h1>
+                    <h1>Preguntas y Respuestas</h1>
                     <div class="page-link">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="javascript:void(0)">FAQ</a></li>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="javascript:void(0)">Preguntas Frecuentes</a></li>
                         </ul>
                     </div>
                 </div>
@@ -224,7 +224,7 @@
                                 <div class="card border border-width-2 border-sky">
                                     <div class="card-header" id="headingOne">
                                         <h5 class="mb-0">
-                                            <button class="btn btn-link bg-sky" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">How can I purchase this item?</button>
+                                            <button class="btn btn-link bg-sky" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Cómo puedo inscribir a mi hijo?</button>
                                         </h5>
                                     </div>
                                     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
@@ -239,7 +239,7 @@
                                     <div class="card-header" id="headingTwo">
                                         <h5 class="mb-0">
                                             <button class="btn btn-link bg-yellow collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                            Why unique and creative design?</button>
+                                            Qué cursos ofrecen?</button>
                                         </h5>
                                     </div>
                                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
@@ -251,7 +251,7 @@
                                 <div class="card border border-width-2 border-pink">
                                     <div class="card-header" id="headingThree">
                                         <h5 class="mb-0">
-                                            <button class="btn btn-link bg-pink collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Are you ready to buy this theme? </button>
+                                            <button class="btn btn-link bg-pink collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Cuantos cupos tiene cada curso? </button>
                                         </h5>
                                     </div>
                                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
@@ -263,7 +263,7 @@
                                 <div class="card border border-width-2 border-green">
                                     <div class="card-header" id="headingFour">
                                         <h5 class="mb-0">
-                                            <button class="btn btn-link bg-green collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Want to start a project with us?</button>
+                                            <button class="btn btn-link bg-green collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Dan clases vía online?</button>
                                         </h5>
                                     </div>
                                     <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
@@ -275,7 +275,7 @@
                                 <div class="card border border-width-2 border-purple">
                                     <div class="card-header" id="headingFive">
                                         <h5 class="mb-0">
-                                            <button class="btn btn-link bg-purple collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">Why this school is best?</button>
+                                            <button class="btn btn-link bg-purple collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">Donde se ubican?</button>
                                         </h5>
                                     </div>
                                     <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
@@ -291,39 +291,39 @@
                     <div class="col-lg-4">
 
                         <div class="block-info">
-                            <h6 class="bg-sky">Ask Questions?</h6>
+                            <h6 class="bg-sky">Tienes alguna pregunta?</h6>
                             <div class="block-info-details">
                                 <form method="post">
 
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="form-group">
-                                                <label>Name *:</label>
+                                                <label>Nombre *:</label>
                                                 <input type="text" class="form-control" name="name" />
                                             </div>
                                         </div>
                                         <div class="col-md-12">
                                             <div class="form-group">
-                                                <label>Email Address *:</label>
+                                                <label>Correo electrónico *:</label>
                                                 <input type="email" class="form-control" name="email" />
                                             </div>
                                         </div>
                                         <div class="col-md-12">
                                             <div class="form-group">
-                                                <label>Subject *:</label>
+                                                <label>Asunto *:</label>
                                                 <input type="text" class="form-control" name="subject" />
                                             </div>
                                         </div>
                                         <div class="col-md-12">
                                             <div class="form-group">
-                                                <label>Write a message *:</label>
+                                                <label>Escribe tu pregunta *:</label>
                                                 <div class="form-group mb-1">
                                                     <textarea rows="3" class="form-control"></textarea>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-md-12 margin-5px-bottom">
-                                            <button type="submit" class="butn yellow small">Submit Now</button>
+                                            <button type="submit" class="butn yellow small">Enviar</button>
                                         </div>
                                     </div>
                                 </form>
