--- a/public/kidszone/login.html
+++ b/public/kidszone/login.html
@@ -106,7 +106,7 @@
 
                                     <!-- start menu area -->
                                     <ul class="navbar-nav ml-auto" id="nav" style="display: none;">
-                                        <li><a href="index.html">Home</a>
+                                        <li><a href="index.html">Inicio</a>
                                         </li>
                                         <li><a href="#">Sobre nosotros</a>
                                             <ul>
@@ -197,22 +197,6 @@
         </header>
         <!-- end header section -->
 
-        <!-- start page title section -->
-        <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
-            <div class="container">
-                <div class="page-title">
-                    <h1>Login</h1>
-                    <div class="page-link">
-                        <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="javascript:void(0)">Login</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- end page title section -->
-
         <!-- start login section -->
         <section>
             <div class="container">
@@ -220,20 +204,20 @@
                     <div class="col-lg-6 col-md-8 center-col">
 
                         <div class="block-info">
-                            <h6 class="bg-sky">Login</h6>
+                            <h6 class="bg-sky">Acceder</h6>
 
                             <div class="padding-50px-all md-padding-50px-all sm-padding-25px-all">
                                 <form method="post">
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="form-group">
-                                                <label>User Name *:</label>
+                                                <label>Usuario *:</label>
                                                 <input type="text" class="form-control" name="name" />
                                             </div>
                                         </div>
                                         <div class="col-md-12">
                                             <div class="form-group">
-                                                <label>Password *:</label>
+                                                <label>Contraseña *:</label>
                                                 <input type="password" class="form-control" name="name" />
                                             </div>
                                         </div>
@@ -241,19 +225,19 @@
                                         <div class="col-sm-6 mb-2 mb-sm-0">
                                             <div class="custom-control custom-checkbox">
                                                 <input type="checkbox" class="custom-control-input" id="login-remember">
-                                                <label class="custom-control-label" for="login-remember">Keep me signed in</label>
+                                                <label class="custom-control-label" for="login-remember">Mantenerme logueado</label>
                                             </div>
                                         </div>
                                         <div class="col-sm-6 text-left text-sm-right">
-                                            <a href="forgot-password.html" class="m-link-muted">Forgot password?</a>
+                                            <a href="forgot-password.html" class="m-link-muted">Olvidó su contraseña?</a>
                                         </div>
 
                                         <div class="col-md-12 margin-35px-top sm-margin-25px-top">
-                                            <button type="submit" class="butn yellow small btn-block">Login</button>
+                                            <button type="submit" class="butn yellow small btn-block">Ingresar</button>
                                         </div>
 
                                         <div class="col-md-12 text-center margin-25px-top">
-                                            <span>Don't have an account yet? <a href="register.html">Register</a></span>
+                                            <span>No tienes una cuenta aún? <a href="register.html">Registrate</a></span>
                                         </div>
 
                                     </div>
