--- a/public/kidszone/photo-gallery.html
+++ b/public/kidszone/photo-gallery.html
@@ -106,13 +106,13 @@
 
                                     <!-- start menu area -->
                                     <ul class="navbar-nav ml-auto" id="nav" style="display: none;">
-                                        <li><a href="index.html">Home</a>
+                                        <li><a href="index.html">Inicio</a>
                                         </li>
                                         <li><a href="#">Sobre nosotros</a>
                                             <ul>
                                                 <li><a href="about.html">Nuestro nido</a></li>
                                                 <li><a href="photo-gallery.html">Galería de Fotos</a></li>
-                                                <li><a href="teachers.html">Maestros</a>
+                                                <li><a href="#">Maestros</a>
                                                     <ul>
                                                         <li><a href="teachers.html">Maestros</a></li>
                                                         <li><a href="teacher-details.html">Detalle de Maestro</a></li>
@@ -201,11 +201,11 @@
         <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
             <div class="container">
                 <div class="page-title">
-                    <h1>Photo Gallery</h1>
+                    <h1>Galería de Fotos</h1>
                     <div class="page-link">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="javascript:void(0)">Photo Gallery</a></li>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="javascript:void(0)">Galería de Fotos</a></li>
                         </ul>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
         <section>
             <div class="container">
                 <div class="section-heading">
-                    <h3>Our Gallery</h3>
+                    <h3>Nuestra galería</h3>
                     <span class="title-separator"></span>
                 </div>
 
