--- a/public/kidszone/teacher-details.html
+++ b/public/kidszone/teacher-details.html
@@ -106,7 +106,7 @@
 
                                     <!-- start menu area -->
                                     <ul class="navbar-nav ml-auto" id="nav" style="display: none;">
-                                        <li><a href="index.html">Home</a>
+                                        <li><a href="index.html">Inicio</a>
                                         </li>
                                         <li><a href="#">Sobre nosotros</a>
                                             <ul>
@@ -201,11 +201,11 @@
         <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
             <div class="container">
                 <div class="page-title">
-                    <h1>Teacher Details</h1>
+                    <h1>Detalles del maestro</h1>
                     <div class="page-link">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="javascript:void(0)">Teacher Details</a></li>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="javascript:void(0)">Detalles del maestro</a></li>
                         </ul>
                     </div>
                 </div>
@@ -227,7 +227,7 @@
                         <div class="col-lg-8 col-md-7">
                             <div class="padding-20px-left xs-no-padding-left">
                                 <h3 class="text-pink">Horothy Hulese</h3>
-                                <h6 class="font-weight-400 font-size16 opacity7 margin-25px-bottom">Maths Educator</h6>
+                                <h6 class="font-weight-400 font-size16 opacity7 margin-25px-bottom">Maestra de Danza</h6>
                                 <p class="margin-25px-bottom">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat ut perspiciatis unde omnis iste natus error sit nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt. </p>
                             </div>
                         </div>
@@ -238,17 +238,17 @@
                     <div class="row">
                         <div class="col-lg-6 sm-margin-40px-bottom">
                             <div class="block-info">
-                                <h6 class="bg-yellow">Personal Info</h6>
+                                <h6 class="bg-yellow">Información Personal</h6>
 
                                 <ul class="list-style12 no-margin">
                                     <li>
                                         <div class="row">
                                             <div class="col-md-4 col-5">
                                                 <i class="fas fa-graduation-cap text-sky"></i>
-                                                <strong class="margin-10px-left text-sky">Degree:</strong>
+                                                <strong class="margin-10px-left text-sky">Título:</strong>
                                             </div>
                                             <div class="col-md-8 col-7">
-                                                <p class="no-margin-bottom">Masters in Education.</p>
+                                                <p class="no-margin-bottom">Licenciado en Educación Preescolar.</p>
                                             </div>
                                         </div>
                                     </li>
@@ -259,7 +259,7 @@
                                                 <strong class="margin-10px-left text-yellow">Exp.:</strong>
                                             </div>
                                             <div class="col-md-8 col-7">
-                                                <p class="no-margin-bottom">5 Year in Education</p>
+                                                <p class="no-margin-bottom">5 Años en educación. 6 Años en Danza</p>
                                             </div>
                                         </div>
                                     </li>
@@ -267,10 +267,10 @@
                                         <div class="row">
                                             <div class="col-md-4 col-5">
                                                 <i class="far fa-file text-pink"></i>
-                                                <strong class="margin-10px-left text-pink">Courses:</strong>
+                                                <strong class="margin-10px-left text-pink">Cursos:</strong>
                                             </div>
                                             <div class="col-md-8 col-7">
-                                                <p class="no-margin-bottom">Maths Category</p>
+                                                <p class="no-margin-bottom">Danza</p>
                                             </div>
                                         </div>
                                     </li>
