--- a/public/kidszone/contact.html
+++ b/public/kidszone/contact.html
@@ -106,11 +106,7 @@
 
                                     <!-- start menu area -->
                                     <ul class="navbar-nav ml-auto" id="nav" style="display: none;">
-                                        <li><a href="#">Home</a>
-                                            <ul>
-                                                <li><a href="demo-1.html">Home 01</a></li>
-                                                <li><a href="demo-2.html">Home 02</a></li>
-                                            </ul>
+                                        <li><a href="index.html">Inicio</a>
                                         </li>
                                         <li><a href="#">Sobre nosotros</a>
                                             <ul>
@@ -205,10 +201,10 @@
         <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
             <div class="container">
                 <div class="page-title">
-                    <h1>Contact Us</h1>
+                    <h1>Contáctanos</h1>
                     <div class="page-link">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="index.html">Inicio</a></li>
                             <li><a href="javascript:void(0)">Contact Us</a></li>
                         </ul>
                     </div>
@@ -320,41 +316,31 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-3 col-sm-6 col-12 sm-margin-30px-bottom">
-                            <div class="footer margin-20px-bottom"><img src="img/logos/logo.png" alt="" class="width-75 sm-width-150px" /></div>
-                            <p class="margin-10px-bottom">Adipisci velit, sed quia numquam eius moditempora inciduntdolo magnam voluptatem.</p>
-                            <a href="about.html" class="text-sky font-weight-700">read more<i class="fas fa-angle-right padding-10px-left display-inline-block vertical-align-middle"></i></a>
+                            <div class="footer margin-20px-bottom"><img src="img/logos/school-logo.jpg" alt="" class="width-75 sm-width-150px" /></div>
+                            <a href="about.html" class="text-sky font-weight-700">Nosotros<i class="fas fa-angle-right padding-10px-left display-inline-block vertical-align-middle"></i></a>
                         </div>
 
-                        <div class="col-lg-3 col-sm-6 col-12 sm-margin-30px-bottom">
+                        <div class="col-lg-6 col-sm-6 col-12 sm-margin-30px-bottom">
                             <div class="padding-50px-left md-padding-20px-left ms-no-padding-left">
-                                <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom ms-margin-15px-bottom">Useful Links</h4>
+                                <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom ms-margin-15px-bottom">Visita</h4>
                                 <ul class="list-style3">
-                                    <li><a href="about.html">About Kidz School</a></li>
-                                    <li><a href="login.html">Admission Open</a></li>
-                                    <li><a href="photo-gallery.html">Photo Gallery</a></li>
-                                    <li><a href="services.html">Best Services</a></li>
-                                    <li><a href="teachers.html">Our Teachers</a></li>
+                                    <li><a href="about.html">Inscripciones abiertas</a></li>
+                                    <li><a href="login.html">Nuestros Cursos</a></li>
+                                    <li><a href="photo-gallery.html">Galería de Fotos</a></li>
+                                    <li><a href="teachers.html">Nuestros Maestros</a></li>
+                                    <li><a href="event-grid.html">Eventos</a></li>
+
                                 </ul>
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-sm-6 col-12 ms-margin-30px-bottom">
-                            <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom ms-margin-15px-bottom">Opening Hours</h4>
-                            <ul class="list-style2">
-                                <li>Mon-Wed<span class="float-right">08:00-12:00 </span> </li>
-                                <li>Thr-Fri<span class="float-right"> 09:00-01:00</span> </li>
-                                <li>Saturday<span class="float-right">09:00-11:00</span> </li>
-                                <li>Sunday<span class="float-right">Closed</span> </li>
-                            </ul>
-                        </div>
-
                         <div class="col-lg-3 col-sm-6 col-12">
                             <div class="padding-50px-left md-padding-20px-left ms-no-padding-left">
-                                <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom">Contact Us</h4>
+                                <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom">Contáctanos</h4>
                                 <ul class="contact-info">
-                                    <li><i class="fas fa-mobile-alt"></i><a href="tel:01234567890">+1 234 567 890</a></li>
-                                    <li><i class="far fa-envelope"></i><a href="mailto:addyour@emailhere">addyour@emailhere</a></li>
-                                    <li><i class="fas fa-map-marker-alt"></i> 74 Guild Street 542B, Town MT. NY 10013.</li>
+                                    <li><i class="fas fa-mobile-alt"></i><a href="tel:584147723260">+58 414 772 3260</a></li>
+                                    <li><i class="far fa-envelope"></i><a href="mailto:elturpialcei@gmail.com">elturpialcei@gmail.com</a></li>
+                                    <li><i class="fas fa-map-marker-alt"></i> Villa Granada, Calle Cuba, Casa 23-24, Puerto Ordaz, Estado Bolívar.</li>
                                 </ul>
                             </div>
                         </div>
