--- a/public/kidszone/course-details.html
+++ b/public/kidszone/course-details.html
@@ -106,11 +106,7 @@
 
                                     <!-- start menu area -->
                                     <ul class="navbar-nav ml-auto" id="nav" style="display: none;">
-                                        <li><a href="#">Home</a>
-                                            <ul>
-                                                <li><a href="demo-1.html">Home 01</a></li>
-                                                <li><a href="demo-2.html">Home 02</a></li>
-                                            </ul>
+                                        <li><a href="index.html">Inicio</a>
                                         </li>
                                         <li><a href="#">Sobre nosotros</a>
                                             <ul>
@@ -205,11 +201,11 @@
         <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
             <div class="container">
                 <div class="page-title">
-                    <h1>Course Details</h1>
+                    <h1>Detalles de Curso</h1>
                     <div class="page-link">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="javascript:void(0)">Course Details</a></li>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="javascript:void(0)">Detalles de Curso</a></li>
                         </ul>
                     </div>
                 </div>
@@ -228,19 +224,19 @@
                             <img src="img/courses/courses-detail.jpg" class="course-img" alt="" />
                         </div>
                         <ul class="course-info margin-50px-bottom sm-margin-35px-bottom">
-                            <li><i class="icon far fa-calendar-alt"></i> Starts Jan 10, 2020</li>
-                            <li><i class="icon fa fa-book"></i> 50 Seats</li>
-                            <li><i class="icon far fa-clock"></i> Duration 3 Months</li>
+                            <li><i class="icon far fa-calendar-alt"></i> Inicia - 20 Enero 2020</li>
+                            <li><i class="icon fa fa-book"></i> 50 Cupos</li>
+                            <li><i class="icon far fa-clock"></i> Duración - 6 Meses</li>
                         </ul>
 
                         <div class="padding-20px-right sm-no-padding-right margin-40px-bottom sm-margin-30px-bottom">
-                            <h4 class="margin-15px-bottom">Course Description</h4>
+                            <h4 class="margin-15px-bottom">Descripción del curso</h4>
                             <p>Vupidatat sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                             <p class="no-margin-bottom">voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius moditempora incidunt voluptatem.</p>
                         </div>
 
                         <div class="padding-20px-right sm-no-padding-right margin-40px-bottom sm-margin-30px-bottom">
-                            <h4 class="margin-15px-bottom">Requirments</h4>
+                            <h4 class="margin-15px-bottom">Requerimientos</h4>
                             <ul class="list-style13 no-margin-bottom">
                                 <li>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt.</li>
                                 <li>Stotam rem aperiam, eaque ipsa quae <a href="javascript:void(0)" class="text-sky">natus error sit</a> voluptatem.</li>
@@ -249,54 +245,54 @@
                         </div>
 
                         <div>
-                            <h4 class="margin-15px-bottom">Course Schedule</h4>
+                            <h4 class="margin-15px-bottom">Horarios del Curso</h4>
 
                             <div class="table-responsive border-all border-radius-5">
                                 <table class="table course-schedule no-margin-bottom">
                                     <thead class="text-white">
                                         <tr>
                                             <th>#</th>
-                                            <th>Subject List</th>
-                                            <th>Class Schedule</th>
-                                            <th>Time</th>
-                                            <th>Example</th>
+                                            <th>Lista de Materias</th>
+                                            <th>Horario de Clases</th>
+                                            <th>Hora</th>
+                                            <th>Online</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
                                             <td>1</td>
-                                            <td>Painting Class</td>
-                                            <td>3 Classes/week</td>
+                                            <td>Clase de Pintura</td>
+                                            <td>3 Clases/semana</td>
                                             <td>09:00-10:00 </td>
-                                            <td>Yes</td>
+                                            <td>Si</td>
                                         </tr>
                                         <tr>
                                             <td>2</td>
-                                            <td>Dance Class</td>
-                                            <td>2 Classes/week</td>
+                                            <td>Clase de Danza</td>
+                                            <td>2 Clases/semana</td>
                                             <td>09:00-11:00</td>
-                                            <td>Yes</td>
+                                            <td>Si</td>
                                         </tr>
                                         <tr>
                                             <td>3</td>
-                                            <td>Yoga Class</td>
-                                            <td>4 Classes/week</td>
+                                            <td>Baby gym</td>
+                                            <td>4 Clases/semana</td>
                                             <td>05:00-07:00</td>
-                                            <td>Yes</td>
+                                            <td>Si</td>
                                         </tr>
                                         <tr>
                                             <td>4</td>
-                                            <td>Active Learning</td>
-                                            <td>4 Classes/week</td>
+                                            <td>Clase de Lectura</td>
+                                            <td>4 Clases/semana</td>
                                             <td>11:00-01:00</td>
-                                            <td>Yes</td>
+                                            <td>Si</td>
                                         </tr>
                                         <tr>
                                             <td>5</td>
-                                            <td>Swimming Class</td>
-                                            <td>5 Classes/week</td>
+                                            <td>Clase de Deporte</td>
+                                            <td>5 Clases/semana</td>
                                             <td>10:00-11:00</td>
-                                            <td>Yes</td>
+                                            <td>Si</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -315,35 +311,35 @@
                                 <div class="widget-sidebar">
 
                                     <div class="block-info">
-                                        <h6 class="bg-yellow">Course Information</h6>
+                                        <h6 class="bg-yellow">Información del curso</h6>
 
                                         <ul class="list-style12">
                                             <li>
-                                                <span class="icon far fa-calendar-alt text-sky font-size20 vertical-align-middle width-40px"></span>Start Date
-                                                <span class="float-right font-size14 opacity7"> Jan 10, 2020</span>
+                                                <span class="icon far fa-calendar-alt text-sky font-size20 vertical-align-middle width-40px"></span>Fecha de inicio
+                                                <span class="float-right font-size14 opacity7"> 10 Enero, 2020</span>
                                             </li>
                                             <li>
-                                                <span class="icon fas fa-birthday-cake text-yellow font-size20 vertical-align-middle width-40px"></span>Years Old
-                                                <span class="float-right font-size14 opacity7">02 - 04 Years</span>
+                                                <span class="icon fas fa-birthday-cake text-yellow font-size20 vertical-align-middle width-40px"></span>Edades
+                                                <span class="float-right font-size14 opacity7">02 - 04 Años</span>
                                             </li>
                                             <li>
-                                                <span class="icon fas fa-anchor text-pink font-size20 vertical-align-middle width-40px"></span>Course Size
-                                                <span class="float-right font-size14 opacity7">50 Seats</span>
+                                                <span class="icon fas fa-anchor text-pink font-size20 vertical-align-middle width-40px"></span>Tamaño del curso
+                                                <span class="float-right font-size14 opacity7">50 Cupos</span>
                                             </li>
                                             <li>
-                                                <span class="icon fas fa-clock text-green font-size20 vertical-align-middle width-40px"></span>Durations
+                                                <span class="icon fas fa-clock text-green font-size20 vertical-align-middle width-40px"></span>Horas
                                                 <span class="float-right font-size14 opacity7">09:00-11:00</span>
                                             </li>
                                             <li>
-                                                <span class="icon fas fa-user text-orange font-size20 vertical-align-middle width-40px"></span>Course Staff
-                                                <span class="float-right font-size14 opacity7">5 Teachers</span>
+                                                <span class="icon fas fa-user text-orange font-size20 vertical-align-middle width-40px"></span>Equipo de Maestros
+                                                <span class="float-right font-size14 opacity7">5 Maestros</span>
                                             </li>
                                             <li>
-                                                <span class="icon fas fa-money-bill-alt text-purple font-size20 vertical-align-middle width-40px"></span>Course Price
+                                                <span class="icon fas fa-money-bill-alt text-purple font-size20 vertical-align-middle width-40px"></span>Precio
                                                 <span class="float-right font-size14 opacity7">$50.00</span>
                                             </li>
                                             <li class="text-center">
-                                                <a href="javascript:void(0)" class="butn orange small btn-block margin-15px-tb">Enroll Toady</a>
+                                                <a href="javascript:void(0)" class="butn orange small btn-block margin-15px-tb">Reservar Cupo</a>
                                             </li>
 
                                         </ul>
@@ -360,8 +356,8 @@
                                             <p class="text-white font-weight-500">Habla con nosotros!!</p>
                                             <div class="bg-white separator-line-horrizontal-full opacity3 margin-20px-bottom sm-margin-15px-bottom"></div>
                                             <ul class="text-center no-padding no-margin">
-                                                <li class="text-white margin-5px-bottom"><i class="fa fa-phone font-size16 text-white margin-15px-right"></i><a href="tel:123456789" class="text-white">(+44) 123 456 789</a></li>
-                                                <li class="text-white"><i class="fa fa-envelope-open font-size16 text-white margin-15px-right"></i><a href="mailto:mail@example.com" class="text-white">addyour@emailhere</a></li>
+                                                <li class="text-white margin-5px-bottom"><i class="fa fa-phone font-size16 text-white margin-15px-right"></i><a href="tel:584147723260" class="text-white">+58 414 772 3260</a></li>
+                                                <li class="text-white"><i class="fa fa-envelope-open font-size16 text-white margin-15px-right"></i><a href="mailto:elturpialcei@gmail.com" class="text-white">elturpialcei@gmail.com</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -382,42 +378,31 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-3 col-sm-6 col-12 sm-margin-30px-bottom">
-                            <div class="footer margin-20px-bottom"><img src="img/logos/logo.png" alt="" class="width-75 sm-width-150px" /></div>
-                            <p class="margin-10px-bottom">Adipisci velit, sed quia numquam eius moditempora inciduntdolo magnam voluptatem.</p>
-                            <a href="about.html" class="text-sky font-weight-700">read more<i class="fas fa-angle-right padding-10px-left display-inline-block vertical-align-middle"></i></a>
+                            <div class="footer margin-20px-bottom"><img src="img/logos/school-logo.jpg" alt="" class="width-75 sm-width-150px" /></div>
+                            <a href="about.html" class="text-sky font-weight-700">Nosotros<i class="fas fa-angle-right padding-10px-left display-inline-block vertical-align-middle"></i></a>
                         </div>
 
-                        <div class="col-lg-3 col-sm-6 col-12 sm-margin-30px-bottom">
+                        <div class="col-lg-6 col-sm-6 col-12 sm-margin-30px-bottom">
                             <div class="padding-50px-left md-padding-20px-left ms-no-padding-left">
-                                <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom ms-margin-15px-bottom">Useful Links</h4>
+                                <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom ms-margin-15px-bottom">Visita</h4>
                                 <ul class="list-style3">
-                                    <li><a href="about.html">About Kidz School</a></li>
-                                    <li><a href="login.html">Admission Open</a></li>
-                                    <li><a href="photo-gallery.html">Photo Gallery</a></li>
-                                    <li><a href="services.html">Best Services</a></li>
-                                    <li><a href="teachers.html">Our Teachers</a></li>
+                                    <li><a href="about.html">Inscripciones abiertas</a></li>
+                                    <li><a href="login.html">Nuestros Cursos</a></li>
+                                    <li><a href="photo-gallery.html">Galería de Fotos</a></li>
+                                    <li><a href="teachers.html">Nuestros Maestros</a></li>
+                                    <li><a href="event-grid.html">Eventos</a></li>
 
                                 </ul>
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-sm-6 col-12 ms-margin-30px-bottom">
-                            <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom ms-margin-15px-bottom">Opening Hours</h4>
-                            <ul class="list-style2">
-                                <li>Mon-Wed<span class="float-right">08:00-12:00 </span> </li>
-                                <li>Thr-Fri<span class="float-right"> 09:00-01:00</span> </li>
-                                <li>Saturday<span class="float-right">09:00-11:00</span> </li>
-                                <li>Sunday<span class="float-right">Closed</span> </li>
-                            </ul>
-                        </div>
-
                         <div class="col-lg-3 col-sm-6 col-12">
                             <div class="padding-50px-left md-padding-20px-left ms-no-padding-left">
-                                <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom">Contact Us</h4>
+                                <h4 class="font-size22 sm-font-size20 xs-font-size18 font-weight-800 margin-25px-bottom sm-margin-20px-bottom">Contáctanos</h4>
                                 <ul class="contact-info">
-                                    <li><i class="fas fa-mobile-alt"></i><a href="tel:01234567890">+1 234 567 890</a></li>
-                                    <li><i class="far fa-envelope"></i><a href="mailto:addyour@emailhere">addyour@emailhere</a></li>
-                                    <li><i class="fas fa-map-marker-alt"></i> 74 Guild Street 542B, Town MT. NY 10013.</li>
+                                    <li><i class="fas fa-mobile-alt"></i><a href="tel:584147723260">+58 414 772 3260</a></li>
+                                    <li><i class="far fa-envelope"></i><a href="mailto:elturpialcei@gmail.com">elturpialcei@gmail.com</a></li>
+                                    <li><i class="fas fa-map-marker-alt"></i> Villa Granada, Calle Cuba, Casa 23-24, Puerto Ordaz, Estado Bolívar.</li>
                                 </ul>
                             </div>
                         </div>
