--- a/public/kidszone/event-details.html
+++ b/public/kidszone/event-details.html
@@ -106,7 +106,7 @@
 
                                     <!-- start menu area -->
                                     <ul class="navbar-nav ml-auto" id="nav" style="display: none;">
-                                        <li><a href="index.html">Home</a>
+                                        <li><a href="index.html">Inicio</a>
                                         </li>
                                         <li><a href="#">Sobre nosotros</a>
                                             <ul>
@@ -201,11 +201,11 @@
         <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
             <div class="container">
                 <div class="page-title">
-                    <h1>Event Details</h1>
+                    <h1>Detalles del Evento</h1>
                     <div class="page-link">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="javascript:void(0)">Event Details</a></li>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="javascript:void(0)">Detalles de Evento</a></li>
                         </ul>
                     </div>
                 </div>
@@ -228,26 +228,26 @@
                                 <div class="widget-sidebar">
 
                                     <div class="block-info">
-                                        <h6 class="bg-yellow">All Events</h6>
+                                        <h6 class="bg-yellow">Todos los Eventos</h6>
 
                                         <ul class="list-style12">
                                             <li>
-                                                <a href="javascript:void(0)"><i class="fas fa-gift text-sky font-size20 vertical-align-middle width-40px"></i>Christmas party</a>
+                                                <a href="javascript:void(0)"><i class="fas fa-gift text-sky font-size20 vertical-align-middle width-40px"></i>Viacrucis</a>
                                             </li>
                                             <li>
-                                                <a href="javascript:void(0)"><i class="fas fa-user text-yellow font-size20 vertical-align-middle width-40px"></i>Parents Meeting</a>
+                                                <a href="javascript:void(0)"><i class="fas fa-user text-yellow font-size20 vertical-align-middle width-40px"></i>Reunión de padres</a>
                                             </li>
                                             <li>
-                                                <a href="javascript:void(0)"><i class="fas fa-atom text-pink font-size20 vertical-align-middle width-40px"></i>Lab day </a>
+                                                <a href="javascript:void(0)"><i class="fas fa-atom text-pink font-size20 vertical-align-middle width-40px"></i>Día de Laboratorio</a>
                                             </li>
                                             <li>
-                                                <a href="javascript:void(0)"><i class="fas fa-volleyball-ball text-green font-size20 vertical-align-middle width-40px"></i>Primary fun </a>
+                                                <a href="javascript:void(0)"><i class="fas fa-volleyball-ball text-green font-size20 vertical-align-middle width-40px"></i>Juegos en casa</a>
                                             </li>
                                             <li>
-                                                <a href="javascript:void(0)"><i class="fas fa-book text-orange font-size20 vertical-align-middle width-40px"></i>Teachers' day </a>
+                                                <a href="javascript:void(0)"><i class="fas fa-book text-orange font-size20 vertical-align-middle width-40px"></i>Día del Mastro</a>
                                             </li>
                                             <li>
-                                                <a href="javascript:void(0)"><i class="fas fa-certificate text-purple font-size20 vertical-align-middle width-40px"></i>Sports day</a>
+                                                <a href="javascript:void(0)"><i class="fas fa-certificate text-purple font-size20 vertical-align-middle width-40px"></i>Día de la Recreación</a>
                                             </li>
                                         </ul>
 
@@ -257,14 +257,14 @@
 
                                 <div class="widget-sidebar">
                                     <div class="block-info">
-                                        <h6 class="bg-pink">Recent Posts</h6>
+                                        <h6 class="bg-pink">Posts Recientes</h6>
 
                                         <div class="block-info-details">
 
                                             <div class="media margin-20px-bottom">
                                                 <img class="mr-3 border-radius-5" src="img/blog/recent-blog-01.jpg" alt="...">
                                                 <div class="media-body mt-n1">
-                                                    <a href="#!" class="margin-5px-bottom font-weight-600 text-extra-dark-gray">Indoor Playground</a>
+                                                    <a href="#!" class="margin-5px-bottom font-weight-600 text-extra-dark-gray">Juegos de interior</a>
                                                     <span class="d-block small">06 Jan 2020</span>
                                                 </div>
                                             </div>
@@ -272,7 +272,7 @@
                                             <div class="media margin-20px-bottom">
                                                 <img class="mr-3 border-radius-5" src="img/blog/recent-blog-02.jpg" alt="...">
                                                 <div class="media-body mt-n1">
-                                                    <a href="#!" class="margin-5px-bottom font-weight-600 text-extra-dark-gray">Child's Enjoying</a>
+                                                    <a href="#!" class="margin-5px-bottom font-weight-600 text-extra-dark-gray">Niños Disfrutando</a>
                                                     <span class="d-block small">12 Jan 2020</span>
                                                 </div>
                                             </div>
@@ -280,7 +280,7 @@
                                             <div class="media">
                                                 <img class="mr-3 border-radius-5" src="img/blog/recent-blog-03.jpg" alt="...">
                                                 <div class="media-body mt-n1">
-                                                    <a href="#!" class="margin-5px-bottom font-weight-600 text-extra-dark-gray">Star To Play</a>
+                                                    <a href="#!" class="margin-5px-bottom font-weight-600 text-extra-dark-gray">Comienza a jugar</a>
                                                     <span class="d-block small">22 Jan 2020</span>
                                                 </div>
                                             </div>
@@ -294,12 +294,12 @@
                                     <div class="event-contact bg-img cover-background theme-overlay border-radius-5" data-overlay-dark="9" data-background="img/content/small-banner.jpg">
                                         <div class="position-relative z-index-9 text-center padding-50px-tb md-padding-40px-tb sm-padding-30px-tb padding-30px-lr">
                                             <i class="fas fa-headset font-size50 md-font-size46 sm-font-size42 text-white margin-15px-bottom"></i>
-                                            <h5 class="text-white font-weight-600 margin-5px-bottom">How can we help?</h5>
-                                            <p class="text-white font-weight-500">Let’s get in touch!!</p>
+                                            <h5 class="text-white font-weight-600 margin-5px-bottom">Tienes alguna duda?</h5>
+                                            <p class="text-white font-weight-500">Contáctanos!!</p>
                                             <div class="bg-white separator-line-horrizontal-full opacity3 margin-20px-bottom sm-margin-15px-bottom"></div>
                                             <ul class="text-center no-padding no-margin">
-                                                <li class="text-white margin-5px-bottom"><i class="fa fa-phone font-size16 text-white margin-15px-right"></i><a href="tel:123456789" class="text-white">(+44) 123 456 789</a></li>
-                                                <li class="text-white"><i class="fa fa-envelope-open font-size16 text-white margin-15px-right"></i><a href="mailto:mail@example.com" class="text-white">addyour@emailhere</a></li>
+                                                <li class="text-white margin-5px-bottom"><i class="fa fa-phone font-size16 text-white margin-15px-right"></i><a href="tel:584147723260" class="text-white">+58 414 772 3260</a></li>
+                                                <li class="text-white"><i class="fa fa-envelope-open font-size16 text-white margin-15px-right"></i><a href="mailto:elturpialcei@gmail.com" class="text-white">elturpialcei@gmail.com</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -316,7 +316,7 @@
                     <div class="col-lg-8 col-md-12 order-1 order-lg-2 sm-margin-30px-bottom">
 
                         <div class="margin-40px-bottom sm-margin-30px-bottom"><img src="img/events/event-single-01.jpg" class="border-radius-5 box-shadow-primary" alt=""></div>
-                        <h4 class="margin-15px-bottom">Christmas party in our school</h4>
+                        <h4 class="margin-15px-bottom">Viacrucis</h4>
                         <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.</p>
                         <p class="margin-30px-bottom">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.</p>
                         <p class="font-italic text-purple padding-30px-lr margin-35px-bottom font-size18 letter-spacing-1">"Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium."</p>
@@ -336,49 +336,45 @@
 
                             <div class="col-md-6 xs-margin-30px-bottom">
                                 <div class="padding-40px-all md-padding-30px-all xs-padding-25px-all border border-width-2 border-yellow border-radius-5 height-100">
-                                    <h5 class="text-yellow">Event Detail</h5>
+                                    <h5 class="text-yellow">Detalles</h5>
                                     <ul class="list-style-1 no-margin-bottom">
                                         <li class="border-bottom line-height-40">
-                                            <span class="font-size16">Start Date</span>
-                                            <span class="float-right font-size14">25 DEC 2019</span>
+                                            <span class="font-size16">Fecha de inicio</span>
+                                            <span class="float-right font-size14">30 Marzo 2021</span>
                                         </li>
                                         <li class="border-bottom line-height-40">
-                                            <span class="font-size16">Start Time</span>
+                                            <span class="font-size16">Hora de inicio</span>
                                             <span class="float-right font-size14">12:45 PM</span>
                                         </li>
                                         <li class="border-bottom line-height-40">
-                                            <span class="font-size16">End Date</span>
-                                            <span class="float-right font-size14">30 DEC 2019</span>
+                                            <span class="font-size16">Fecha de culminación</span>
+                                            <span class="float-right font-size14">04 Abril 2021</span>
                                         </li>
                                         <li class="border-bottom line-height-40">
-                                            <span class="font-size16">End Time</span>
+                                            <span class="font-size16">Hora de culminación</span>
                                             <span class="float-right font-size14">05:00 PM</span>
                                         </li>
                                         <li class="line-height-40">
-                                            <span class="font-size16">Location</span>
-                                            <span class="float-right font-size14">New York</span>
+                                            <span class="font-size16">Lugar</span>
+                                            <span class="float-right font-size14">Puerto Ordaz</span>
                                         </li>
-                                    </ul>
-                                    <a href="javascript:void(0)" class="butn orange small vertical-align-middle margin-20px-top margin-15px-top margin-10px-bottom">Book Now</a>
+                                    </ul>                                    
                                 </div>
                             </div>
 
                             <div class="col-md-6">
                                 <div class="padding-40px-all md-padding-30px-all xs-padding-25px-all border border-width-2 border-pink border-radius-5 height-100">
-                                    <h5 class="text-pink">Venue</h5>
-                                    <p>In christmas party totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
+                                    <h5 class="text-pink">Lugar de Encuentro</h5>
+                                    <p>Viacrucis en totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
                                     <ul class="list-style-1">
-                                        <li><i class="far fa-calendar-alt margin-10px-right"></i>25 DEC 2019</li>
-                                        <li><i class="far fa-clock margin-10px-right"></i> 12:45 PM 05:00 AM
+                                        <li><i class="far fa-calendar-alt margin-10px-right"></i>30 Marzo 2021</li>
+                                        <li><i class="far fa-clock margin-10px-right"></i> 12:45 PM - 05:00 AM
                                         </li>
-                                        <li><i class="fas fa-book-open margin-10px-right"></i>New York, USA</li>
+                                        <li><i class="fas fa-book-open margin-10px-right"></i>Puerto Ordaz</li>
                                     </ul>
                                     <ul class="no-margin-bottom event-venue">
                                         <li class="display-inline-block margin-10px-right"><a href="javascript:void(0);"><i class="fab fa-facebook-f"></i></a></li>
                                         <li class="display-inline-block margin-10px-right"><a href="javascript:void(0);"><i class="fab fa-twitter"></i></a></li>
-                                        <li class="display-inline-block margin-10px-right"><a href="javascript:void(0);"><i class="fab fa-pinterest-p"></i></a></li>
-                                        <li class="display-inline-block margin-10px-right"><a href="javascript:void(0);"><i class="fab fa-youtube"></i></a></li>
-                                        <li class="display-inline-block"><a href="javascript:void(0);"><i class="fab fa-linkedin-in"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
