--- a/public/kidszone/index.html
+++ b/public/kidszone/index.html
@@ -111,7 +111,7 @@
 
                                     <!-- start menu area -->
                                     <ul class="navbar-nav ml-auto" id="nav" style="display: none;">
-                                        <li><a href="index.html">Home</a>
+                                        <li><a href="index.html">Inicio</a>
                                         </li>
                                         <li><a href="#">Sobre nosotros</a>
                                             <ul>
@@ -229,7 +229,7 @@
                                     "to":"auto:auto;",
                                     "ease":"Power4.easeInOut"
                                 }]'>
-                            <p class="white-space">Welcome to kids school</p>
+                            <p class="white-space">Bienvenido al TurpialSocial</p>
                         </div>
 
                         <!-- HERO TITLE -->
@@ -247,7 +247,7 @@
                                         "frame":"999",
                                         "to":"auto:auto;",
                                         "ease":"Power4.easeInOut"
-                                    }]' data-splitout="none">The brighter future for every child
+                                    }]' data-splitout="none">Tenemos las alas abiertas para ti
                         </div>
 
                         <!-- BUTTON -->
@@ -263,7 +263,7 @@
                                         "speed":1000,
                                         "frame":"999",
                                         "to":"opacity:0;","ease":"Power4.easeOut"
-                                    }]'><a href='courses-grid.html' class='butn yellow'><span>View More</span></a>
+                                    }]'><a href='about.html' class='butn yellow'><span>Ver más</span></a>
                         </div>
 
                     </li>
@@ -291,7 +291,7 @@
                                     "to":"auto:auto;",
                                     "ease":"Power4.easeInOut"
                                 }]'>
-                            <p class="white-space">Friendly Atmosphere</p>
+                            <p class="white-space">Atmósfera amigable</p>
                         </div>
 
                         <!-- HERO TITLE -->
@@ -309,7 +309,7 @@
                                                 "frame":"999",
                                                 "to":"auto:auto;",
                                                 "ease":"Power4.easeInOut"
-                                            }]' data-splitout="none">Play and create for new things
+                                            }]' data-splitout="none">Juega y crea nuevas cosas
                         </div>
 
                         <!-- BUTTON -->
@@ -325,7 +325,7 @@
                                         "speed":1000,
                                         "frame":"999",
                                         "to":"opacity:0;","ease":"Power4.easeOut"
-                                    }]'><a href='courses-grid.html' class='butn yellow'><span>View More</span></a>
+                                    }]'><a href='courses-grid.html' class='butn yellow'><span>Ver más</span></a>
                         </div>
 
                     </li>
@@ -356,7 +356,7 @@
                                     "to":"auto:auto;",
                                     "ease":"Power3.easeInOut"
                                 }]'>
-                            <p class="white-space">Dedicated to excellence</p>
+                            <p class="white-space">Dedicados a la excelencia</p>
                         </div>
 
                         <!-- HERO TITLE -->
@@ -374,7 +374,7 @@
                                     "frame":"999",
                                     "to":"auto:auto;",
                                     "ease":"Power3.easeInOut"
-                                }]' data-splitout="none">Small age towards create vision
+                                }]' data-splitout="none">Pequeña edad para crear visión.
                         </div>
 
                         <!-- BUTTON -->
@@ -390,7 +390,7 @@
                                         "speed":1000,
                                         "frame":"999",
                                         "to":"opacity:0;","ease":"Power3.easeOut"
-                                    }]'><a href='courses-grid.html' class='butn yellow'><span>View More</span></a>
+                                    }]'><a href='courses-grid.html' class='butn yellow'><span>Ver más</span></a>
                         </div>
 
                     </li>
@@ -410,8 +410,8 @@
                             <div class="icon-img">
                                 <img src="img/services/1.png" alt="" />
                             </div>
-                            <h4><a href="services-details.html">Great Teachers</a></h4>
-                            <p>We provides always our best solution. Creative skill and a joy found activities.</p>
+                            <h4><a href="services-details.html">Magníficos profesores</a></h4>
+                            <p>Brindamos siempre nuestra mejor solución. Habilidad creativa y actividades divertidas.</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-3 sm-margin-30px-bottom ms-margin-25px-bottom">
@@ -419,8 +419,8 @@
                             <div class="icon-img">
                                 <img src="img/services/2.png" alt="" />
                             </div>
-                            <h4><a href="services-details.html">Nutritious Meal</a></h4>
-                            <p>We provides always our best solution. Creative skill and a joy found activities.</p>
+                            <h4><a href="services-details.html">Comida Nutritiva</a></h4>
+                            <p>WBrindamos siempre nuestra mejor solución. Habilidad creativa y actividades divertidas.</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-3 ms-margin-25px-bottom">
@@ -428,8 +428,8 @@
                             <div class="icon-img">
                                 <img src="img/services/3.png" alt="" />
                             </div>
-                            <h4><a href="services-details.html">Learn And Play</a></h4>
-                            <p>We provides always our best solution. Creative skill and a joy found activities.</p>
+                            <h4><a href="services-details.html">Juega y aprende</a></h4>
+                            <p>Brindamos siempre nuestra mejor solución. Habilidad creativa y actividades divertidas.</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-3">
@@ -437,8 +437,8 @@
                             <div class="icon-img">
                                 <img src="img/services/4.png" alt="" />
                             </div>
-                            <h4><a href="services-details.html">Cute Enironment</a></h4>
-                            <p>We provides always our best solution. Creative skill and a joy found activities.</p>
+                            <h4><a href="services-details.html">Lindo ambiente</a></h4>
+                            <p>Brindamos siempre nuestra mejor solución. Habilidad creativa y actividades divertidas.</p>
                         </div>
                     </div>
                 </div>
@@ -464,7 +464,7 @@
                         </div>
                         <div class="course-desc">
                             <h4><a href="course-details.html">Deporte</a></h4>
-                            <p>Our kids extracurricular activities and games that children love after school activities.</p>
+                            <p>Nuestras actividades extracurriculares y juegos que los niños amarán hacer luego de la escuela.</p>
                         </div>
                         <div class="course-details">
                             <ul>
@@ -486,7 +486,7 @@
                         </div>
                         <div class="course-desc">
                             <h4><a href="course-details.html">Recreación</a></h4>
-                            <p>Our kids extracurricular activities and games that children love after school activities.</p>
+                            <p>Nuestras actividades extracurriculares y juegos que los niños amarán hacer luego de la escuela.</p>
                         </div>
                         <div class="course-details">
                             <ul>
@@ -508,7 +508,7 @@
                         </div>
                         <div class="course-desc">
                             <h4><a href="course-details.html">Baby Gym</a></h4>
-                            <p>Our kids extracurricular activities and games that children love after school activities.</p>
+                            <p>Nuestras actividades extracurriculares y juegos que los niños amarán hacer luego de la escuela.</p>
                         </div>
                         <div class="course-details">
                             <ul>
@@ -530,7 +530,7 @@
                         </div>
                         <div class="course-desc">
                             <h4><a href="course-details.html">Coral Infantil</a></h4>
-                            <p>Our kids extracurricular activities and games that children love after school activities.</p>
+                            <p>Nuestras actividades extracurriculares y juegos que los niños amarán hacer luego de la escuela.</p>
                         </div>
                         <div class="course-details">
                             <ul>
@@ -552,7 +552,7 @@
                         </div>
                         <div class="course-desc">
                             <h4><a href="course-details.html">Tareas dirigidas</a></h4>
-                            <p>Our kids extracurricular activities and games that children love after school activities.</p>
+                            <p>Nuestras actividades extracurriculares y juegos que los niños amarán hacer luego de la escuela.</p>
                         </div>
                         <div class="course-details">
                             <ul>
@@ -574,7 +574,7 @@
                         </div>
                         <div class="course-desc">
                             <h4><a href="course-details.html">Maternal/Preescolar</a></h4>
-                            <p>Our kids extracurricular activities and games that children love after school activities.</p>
+                            <p>Nuestras actividades extracurriculares y juegos que los niños amarán hacer luego de la escuela.</p>
                         </div>
                         <div class="course-details">
                             <ul>
@@ -596,7 +596,7 @@
                         </div>
                         <div class="course-desc">
                             <h4><a href="course-details.html">Clases de Flamenco</a></h4>
-                            <p>Our kids extracurricular activities and games that children love after school activities.</p>
+                            <p>Nuestras actividades extracurriculares y juegos que los niños amarán hacer luego de la escuela.</p>
                         </div>
                         <div class="course-details">
                             <ul>
@@ -624,12 +624,12 @@
                     <div class="col-md-9 col-lg-8 col-xl-7">
                         <div class="about-detail">
                             <div class="section-heading left">
-                                <h2>About Us</h2>
+                                <h2>Sobre Nosotros</h2>
                                 <span class="title-separator"></span>
                             </div>
-                            <p>The School is your child’s first experience consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <p>El Preescolar es la primera experiencia de su hijo consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident explicabo. </p>
-                            <a href="about.html" class="butn small margin-15px-top xs-margin-5px-top">Learn More</a>
+                            <a href="about.html" class="butn small margin-15px-top xs-margin-5px-top">Conocer más</a>
                         </div>
                     </div>
                 </div>
@@ -861,9 +861,6 @@
                                     <li>
                                         <a href="blog-post.html"><i aria-hidden="true" class="fa fa-user"></i> Admin</a>
                                     </li>
-                                    <li>
-                                        <a href="blog-post.html"><i aria-hidden="true" class="fas fa-comments"></i> 4 Comments</a>
-                                    </li>
                                 </ul>
                                 <h4><a href="blog-post.html">Inscripciones abiertas</a></h4>
                                 <p>Coluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat explicabo.</p>
@@ -887,9 +884,6 @@
                                 <ul class="blog-deta">
                                     <li>
                                         <a href="blog-post.html"><i aria-hidden="true" class="fa fa-user"></i> Admin</a>
-                                    </li>
-                                    <li>
-                                        <a href="blog-post.html"><i aria-hidden="true" class="fas fa-comments"></i> 6 Comments</a>
                                     </li>
                                 </ul>
                                 <h4><a href="blog-post.html">28/03/2021 Entrega de boletines</a></h4>
