--- a/public/kidszone/register.html
+++ b/public/kidszone/register.html
@@ -106,7 +106,7 @@
 
                                     <!-- start menu area -->
                                     <ul class="navbar-nav ml-auto" id="nav" style="display: none;">
-                                        <li><a href="index.html">Home</a>
+                                        <li><a href="index.html">Inicio</a>
                                         </li>
                                         <li><a href="#">Sobre nosotros</a>
                                             <ul>
@@ -197,29 +197,13 @@
         </header>
         <!-- end header section -->
 
-        <!-- start page title section -->
-        <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
-            <div class="container">
-                <div class="page-title">
-                    <h1>Register</h1>
-                    <div class="page-link">
-                        <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="javascript:void(0)">Register</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- end page title section -->
-
         <!-- start register section -->
         <section>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-md-10 center-col">
                         <div class="block-info">
-                            <h6 class="bg-sky">Register</h6>
+                            <h6 class="bg-sky">Registro</h6>
 
                             <div class="padding-50px-all md-padding-50px-all sm-padding-25px-all">
 
@@ -228,31 +212,31 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label>Name *:</label>
+                                                <label>Nombre *:</label>
                                                 <input type="text" class="form-control" name="name" />
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label>User Name *:</label>
+                                                <label>Nombre de Usuario *:</label>
                                                 <input type="text" class="form-control" name="username" />
                                             </div>
                                         </div>
                                         <div class="col-md-12">
                                             <div class="form-group">
-                                                <label>Email *:</label>
+                                                <label>Correo electrónico *:</label>
                                                 <input type="email" class="form-control" name="phone" />
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label>Password *:</label>
+                                                <label>Contraseña *:</label>
                                                 <input type="password" class="form-control" name="password" />
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label>Re-Password *:</label>
+                                                <label>Escriba otra vez su contraseña *:</label>
                                                 <input type="password" class="form-control" name="re-password" />
                                             </div>
                                         </div>
@@ -260,16 +244,16 @@
                                         <div class="col-md-12">
                                             <div class="custom-control custom-checkbox">
                                                 <input type="checkbox" class="custom-control-input" id="terms-condition">
-                                                <label class="custom-control-label" for="terms-condition">I agree to the <a href="#!">Terms &amp; Conditions</a></label>
+                                                <label class="custom-control-label" for="terms-condition">Estoy de acuerdo con los <a href="#!">Términos y Condiciones</a></label>
                                             </div>
                                         </div>
 
                                         <div class="col-md-12 margin-35px-top sm-margin-25px-top">
-                                            <button type="submit" class="butn yellow small btn-block">Register</button>
+                                            <button type="submit" class="butn yellow small btn-block">Registrarme</button>
                                         </div>
 
                                         <div class="col-md-12 text-center margin-25px-top">
-                                            <span>Already have an account? <a href="login.html">Login</a></span>
+                                            <span>Ya tienes una cuenta? <a href="login.html">Acceder</a></span>
                                         </div>
 
                                     </div>
