--- a/public/kidszone/services-details.html
+++ b/public/kidszone/services-details.html
@@ -54,8 +54,8 @@
 
                             <div class="top-bar-info">
                                 <ul>
-                                    <li><a href="tel:01234567890"><i class="fas fa-mobile-alt"></i><span class="d-none d-sm-inline-block vertical-align-middle padding-10px-left">(+123) 456 7890</span></a></li>
-                                    <li><a href="mailto:addyour@emailhere"><i class="far fa-envelope"></i><span class="d-none d-sm-inline-block vertical-align-middle padding-10px-left">addyour@emailhere</span></a></li>
+                                    <li><a href="tel:584147723260"><i class="fas fa-mobile-alt"></i><span class="d-none d-sm-inline-block vertical-align-middle padding-10px-left">(+58) 414 8740034</span></a></li>
+                                    <li><a href="mailto:elturpialcei@gmail.com"><i class="far fa-envelope"></i><span class="d-none d-sm-inline-block vertical-align-middle padding-10px-left">elturpialcei@gmail.com</span></a></li>
                                 </ul>
                             </div>
 
@@ -65,8 +65,6 @@
                                 <ul class="top-social-icon">
                                     <li><a href="javascript:void(0)"><i class="fab fa-facebook-f"></i></a></li>
                                     <li><a href="javascript:void(0)"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="javascript:void(0)"><i class="fab fa-youtube"></i></a></li>
-                                    <li><a href="javascript:void(0)"><i class="fab fa-linkedin-in"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -84,7 +82,7 @@
                                 <span class="input-group-addon cursor-pointer">
                                     <button class="search-form_submit fas fa-search font-size18 text-white" type="submit"></button>
                                 </span>
-                                <input type="text" class="search-form_input form-control" name="s" autocomplete="off" placeholder="Type & hit enter...">
+                                <input type="text" class="search-form_input form-control" name="s" autocomplete="off" placeholder="¿Qué buscas?">
                                 <span class="input-group-addon close-search"><i class="fas fa-times font-size18 line-height-28 margin-5px-top"></i></span>
                             </div>
                         </form>
@@ -100,7 +98,7 @@
 
                                     <div class="navbar-header navbar-header-custom">
                                         <!-- start logo -->
-                                        <a href="index.html" class="navbar-brand"><img id="logo" src="img/logos/logo.png" alt="logo"></a>
+                                        <a href="index.html" class="navbar-brand"><img id="logo" src="img/logos/school-logo.jpg" alt="logo"></a>
                                         <!-- end logo -->
                                     </div>
 
@@ -108,104 +106,82 @@
 
                                     <!-- start menu area -->
                                     <ul class="navbar-nav ml-auto" id="nav" style="display: none;">
-                                        <li><a href="#">Home</a>
-                                            <ul>
-                                                <li><a href="demo-1.html">Home 01</a></li>
-                                                <li><a href="demo-2.html">Home 02</a></li>
-                                            </ul>
+                                        <li><a href="index.html">Inicio</a>
                                         </li>
-                                        <li><a href="about.html">About Us</a></li>
-                                        <li><a href="#">Pages</a>
+                                        <li><a href="#">Sobre nosotros</a>
                                             <ul>
-                                                <li><a href="#">Courses</a>
+                                                <li><a href="about.html">Nuestro nido</a></li>
+                                                <li><a href="photo-gallery.html">Galería de Fotos</a></li>
+                                                <li><a href="#">Maestros</a>
                                                     <ul>
-                                                        <li><a href="courses-grid.html">Courses Grid</a></li>
-                                                        <li><a href="course-details.html">Course Details</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a href="#">Teachers</a>
-                                                    <ul>
-                                                        <li><a href="teachers.html">Teachers</a></li>
-                                                        <li><a href="teacher-details.html">Teacher Details</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a href="#">Events</a>
-                                                    <ul>
-                                                        <li><a href="event-grid.html">Event Grid</a></li>
-                                                        <li><a href="event-details.html">Event Details</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a href="photo-gallery.html">Photo Gallery</a></li>
-                                                <li><a href="pricing-table.html">Pricing Table</a></li>
-                                                <li><a href="time-table.html">Time Table</a></li>
-                                                <li><a href="#">Others</a>
-                                                    <ul>
-                                                        <li><a href="faq.html">Faq</a></li>
-                                                        <li><a href="login.html">Login</a></li>
-                                                        <li><a href="register.html">Register</a></li>
-                                                        <li><a href="forgot-password.html">Forgot Password</a></li>
-                                                        <li><a href="404-page.html">404 Page</a></li>
-                                                        <li><a href="coming-soon.html">Comingsoon</a></li>
+                                                        <li><a href="teachers.html">Maestros</a></li>
+                                                        <li><a href="teacher-details.html">Detalle de Maestro</a></li>
                                                     </ul>
                                                 </li>
                                             </ul>
                                         </li>
-                                        <li><a href="#">Services</a>
+                                        <li><a href="#">Cursos</a>
                                             <ul>
-                                                <li><a href="services.html">Services</a></li>
-                                                <li><a href="services-details.html">Services Detail</a></li>
+                                                <li><a href="#">Cursos</a>
+                                                    <ul>
+                                                        <li><a href="courses-grid.html">Lista de Cursos</a></li>
+                                                        <li><a href="course-details.html">Detalle de Curso</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li><a href="course-details.html">Tareas Dirigidas</a></li>
+                                                <li><a href="course-details.html">Maternal/Preescolar</a></li>
+                                                <li><a href="course-details.html">Baby Gym</a></li>
+                                                <li><a href="#">Actividades extras</a>
+                                                    <ul>
+                                                        <li><a href="event-details.html">Deporte</a></li>
+                                                        <li><a href="event-details.html">Recreación</a></li>
+                                                        <li><a href="event-details.html">Coral Infatil</a></li>
+                                                        <li><a href="event-details.html">Clases de Flamenco</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li><a href="time-table.html">Horarios</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="#">Blog</a>
+                                        <li><a href="#">Eventos</a>
+                                            <ul>
+                                                <li><a href="#">Eventos</a>
+                                                    <ul>
+                                                        <li><a href="event-grid.html">Lista de eventos</a></li>
+                                                        <li><a href="event-details.html">Detalles de Eventos</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li><a href="photo-gallery.html">Graduaciones</a></li>
+                                            </ul>
+                                        <li>
+                                        <li><a href="blog-grid.html">Blog</a>
                                             <ul>
                                                 <li><a href="blog-grid.html">Blog Grid</a></li>
                                                 <li><a href="blog-list-sidebar.html">Blog with Right Sidebar</a></li>
                                                 <li><a href="blog-post.html">Blog Post</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="#">Shop</a>
+
+                                        <li><a href="contact.html">Contáctanos</a></li>
+
+                                        <li><a href="#">Paginas</a>
                                             <ul>
-                                                <li><a href="product-four-columns.html">Product Four Columns</a></li>
-                                                <li><a href="shop-product-grid.html">Product Grid</a></li>
-                                                <li><a href="shop-product-details.html">Product Details</a></li>
-                                                <li><a href="shop-product-cart.html">Shop Cart</a></li>
-                                                <li><a href="shop-checkout.html">Shop Checkout</a></li>
+                                                <li><a href="time-table.html">Horarios</a></li>
+                                                <li><a href="faq.html">Preguntas frecuentes</a></li>
+                                                <li><a href="login.html">Acceder</a></li>
+                                                <li><a href="register.html">Registro</a></li>
+                                                <li><a href="forgot-password.html">Olvido su contraseña</a></li>
+                                                <li><a href="404-page.html">404 Page</a></li>
+                                                <li><a href="coming-soon.html">Viene Pronto</a></li>
+                                                        
                                             </ul>
-                                        </li>
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        </li>    
                                     </ul>
                                     <!-- end menu area -->
 
                                     <!-- start atribute navigation -->
                                     <div class="attr-nav sm-no-margin sm-margin-70px-right xs-margin-60px-right">
                                         <ul>
-                                            <li class="dropdown sm-margin-20px-right">
-                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                                    <i class="fas fa-shopping-cart"></i>
-                                                    <span class="badge bg-theme">3</span>
-                                                </a>
-                                                <ul class="dropdown-menu cart-list">
-                                                    <li>
-                                                        <a href="#" class="photo"><img src="img/shop/cart-thumb-01.jpg" class="cart-thumb" alt="" /></a>
-                                                        <h6><a href="#">Fancy T-Shirt</a></h6>
-                                                        <p>2x - <span class="price">$21.00</span></p>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#" class="photo"><img src="img/shop/cart-thumb-02.jpg" class="cart-thumb" alt="" /></a>
-                                                        <h6><a href="#">Cotton Top</a></h6>
-                                                        <p>1x - <span class="price">$16.00</span></p>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#" class="photo"><img src="img/shop/cart-thumb-03.jpg" class="cart-thumb" alt="" /></a>
-                                                        <h6><a href="#">School Bag</a></h6>
-                                                        <p>2x - <span class="price">$39.00</span></p>
-                                                    </li>
-                                                    <li class="total bg-theme">
-                                                        <span class="pull-left"><strong>Total</strong>: $54.00</span>
-                                                        <a href="#" class="butn small btn-cart yellow"><span>View Cart</span></a>
-                                                    </li>
-                                                </ul>
-                                            </li>
+                                            <li class="user"><a href="login.html"><i class="fas fa-user"></i></a></li>
                                             <li class="search"><a href="javascript:void(0)"><i class="fas fa-search"></i></a></li>
                                         </ul>
                                     </div>
@@ -225,11 +201,11 @@
         <section class="page-title-section bg-img cover-background bg-yellow" data-overlay-dark="0" data-background="img/bg/bg1.jpg">
             <div class="container">
                 <div class="page-title">
-                    <h1>Srevice Details</h1>
+                    <h1>Detalles del Servicio</h1>
                     <div class="page-link">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="javascript:void(0)">Srevice Details</a></li>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="javascript:void(0)">Detalles del Servicio</a></li>
                         </ul>
                     </div>
                 </div>
